--- a/Index/前缀和.md
+++ b/Index/前缀和.md
@@ -1,6 +1,6 @@
 | 题目                                                         | 题解                                                         | 难度 | 推荐指数 |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---- | -------- |
-| [53. 最大子数组和](https://leetcode.cn/problems/maximum-subarray/) | [LeetCode 题解链接](https://leetcode.cn/problems/maximum-subarray/solutions/2534027/gong-shui-san-xie-cong-on-de-chang-gui-l-22hq/) | 中等 | 🤩🤩🤩🤩     |
+| [53. 最大子数组和](https://leetcode.cn/problems/maximum-subarray/)（同 LCR 161） | [LeetCode 题解链接](https://leetcode.cn/problems/maximum-subarray/solutions/2534027/gong-shui-san-xie-cong-on-de-chang-gui-l-22hq/) | 中等 | 🤩🤩🤩🤩     |
 | [85. 最大矩形](https://leetcode.cn/problems/maximal-rectangle/) | [LeetCode 题解链接](https://leetcode.cn/problems/maximal-rectangle/solution/by-ac_oier-k02i/) | 困难 | 🤩🤩🤩      |
 | [187. 重复的DNA序列](https://leetcode-cn.com/problems/repeated-dna-sequences/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/repeated-dna-sequences/solution/gong-shui-san-xie-yi-ti-shuang-jie-hua-d-30pg/) | 中等 | 🤩🤩🤩🤩     |
 | [209. 长度最小的子数组](https://leetcode.cn/problems/minimum-size-subarray-sum/) | [LeetCode 题解链接](https://leetcode.cn/problems/minimum-size-subarray-sum/solution/by-ac_oier-c5jm/) | 中等 | 🤩🤩🤩🤩🤩    |
@@ -44,6 +44,7 @@
 | [1894. 找到需要补充粉笔的学生编号](https://leetcode-cn.com/problems/find-the-student-that-will-replace-the-chalk/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/find-the-student-that-will-replace-the-chalk/solution/gong-shui-san-xie-yi-ti-shuang-jie-qian-kpqsk/) | 中等 | 🤩🤩🤩🤩     |
 | [2055. 蜡烛之间的盘子](https://leetcode-cn.com/problems/plates-between-candles/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/plates-between-candles/solution/gong-shui-san-xie-er-fen-qian-zhui-he-yu-0qt0/) | 中等 | 🤩🤩🤩🤩     |
 | [2100. 适合打劫银行的日子](https://leetcode-cn.com/problems/find-good-days-to-rob-the-bank/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/find-good-days-to-rob-the-bank/solution/gong-shui-san-xie-qian-zhui-he-yun-yong-gf604/) | 中等 | 🤩🤩🤩🤩     |
+| [LCR 161. 连续天数的最高销售额](https://leetcode.cn/problems/lian-xu-zi-shu-zu-de-zui-da-he-lcof/)（同 53） | [LeetCode 题解链接](https://leetcode.cn/problems/lian-xu-zi-shu-zu-de-zui-da-he-lcof/solutions/2556250/gong-shui-san-xie-tu-jie-cong-on-chang-g-se9p/) | 中等 | 🤩🤩🤩🤩     |
 | [剑指 Offer II 008. 和大于等于 target 的最短子数组](https://leetcode.cn/problems/2VG8Kg/) | [LeetCode 题解链接](https://leetcode.cn/problems/2VG8Kg/solution/by-ac_oier-vw5r/) | 中等 | 🤩🤩🤩🤩     |
 | [剑指 Offer II 010. 和为 k 的子数组](https://leetcode.cn/problems/QTMn0o/) | [LeetCode 题解链接](https://leetcode.cn/problems/QTMn0o/solution/by-ac_oier-hr6k/) | 中等 | 🤩🤩🤩🤩     |
 | [剑指 Offer II 011. 0 和 1 个数相同的子数组](https://leetcode.cn/problems/A1NYOS/) | [LeetCode 题解链接](https://leetcode.cn/problems/A1NYOS/solution/by-ac_oier-lmmo/) | 中等 | 🤩🤩🤩🤩     |
