--- a/LeetCode/1-10/3. 无重复字符的最长子串（中等）.md
+++ b/LeetCode/1-10/3. 无重复字符的最长子串（中等）.md
@@ -47,21 +47,21 @@ Tag : 「哈希表」、「双指针」、「滑动窗口」
 
 ---
 
-### 双指针 + 哈希表
+### 滑动窗口
 
-定义两个指针 `start` 和 `end`，表示当前处理到的子串是 `[start,end]`。
+定义两个指针 `start` 和 `end`， `[start:end]` 表示当前处理到的子串。
 
-`[start,end]` 始终满足要求：无重复字符。
+子串 `[start:end]` 始终满足要求：无重复字符。
 
-从前往后进行扫描，同时维护一个哈希表记录 `[start,end]` 中每个字符出现的次数。
+从前往后进行扫描 `s`，用哈希表记录 `[start:end]` 中每字符的出现次数。
 
 遍历过程中，`end` 不断自增，将第 `end` 个字符在哈希表中出现的次数加一。
 
-令 `right` 为 下标 `end` 对应的字符，当满足 `map.get(right) > 1` 时，代表此前出现过第 `end` 位对应的字符。
+令 `right` 为下标 `end` 对应的字符，当满足 `map.get(right) > 1` 时，代表此前出现过第 `end` 位对应的字符。
 
-此时更新 `start` 的位置（使其右移），直到不满足 `map.get(right) > 1` （代表 `[start,end]` 恢复满足无重复字符的条件）。同时使用 `[start,end]` 长度更新答案。
+此时更新 `start` 的位置（使其右移），直到不满足 `map.get(right) > 1` （代表 `[start:end]` 恢复满足无重复字符的条件），再用 `[start:end]` 长度更新答案。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int lengthOfLongestSubstring(String s) {
@@ -80,6 +80,63 @@ class Solution {
         return ans;
     }
 }
+```
+Python 代码：
+```Python
+class Solution:
+    def lengthOfLongestSubstring(self, s: str) -> int:
+        map = {}
+        ans = 0
+        start = 0
+        for end in range(len(s)):
+            right = s[end]
+            map[right] = map.get(right, 0) + 1
+            while map[right] > 1:
+                left = s[start]
+                map[left] = map[left] - 1
+                start += 1
+            ans = max(ans, end - start + 1)
+        return ans
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int lengthOfLongestSubstring(string s) {
+        unordered_map<char, int> map;
+        int ans = 0;
+        for (int start = 0, end = 0; end < s.length(); end++) {
+            char right = s[end];
+            map[right] = map[right] + 1;
+            while (map[right] > 1) {
+                char left = s[start];
+                map[left] = map[left] - 1;
+                start++;
+            }
+            ans = max(ans, end - start + 1);
+        }
+        return ans;
+    }
+};
+```
+TypeScript 代码：
+```TypeScript
+function lengthOfLongestSubstring(s: string): number {
+  const map: { [key: string]: number } = {};
+  let ans = 0;
+  let start = 0;
+  for (let end = 0; end < s.length; end++) {
+      const right = s.charAt(end);
+      map[right] = (map[right] || 0) + 1;
+      while (map[right] > 1) {
+          const left = s.charAt(start);
+          map[left] = (map[left] || 0) - 1;
+          start++;
+      }
+      ans = Math.max(ans, end - start + 1);
+  }
+  return ans;
+};
 ```
 * 时间复杂度：虽然有两层循环，但每个字符在哈希表中最多只会被插入和删除一次，复杂度为 $O(n)$
 * 空间复杂度：使用了哈希表进行字符记录，复杂度为 $O(n)$
