--- a/LeetCode/1011-1020/1011. 在 D 天内送达包裹的能力（中等）.md
+++ b/LeetCode/1011-1020/1011. 在 D 天内送达包裹的能力（中等）.md
@@ -6,12 +6,15 @@ Tag : 「二分」
 
 
 
+传送带上的包裹必须在 `D` 天内从一个港口运送到另一个港口。
 
-传送带上的包裹必须在 D 天内从一个港口运送到另一个港口。
+传送带上的第 `i` 个包裹的重量为 $weights[i]$。
 
-传送带上的第 i 个包裹的重量为 weights[i]。每一天，我们都会按给出重量的顺序往传送带上装载包裹。我们装载的重量不会超过船的最大运载重量。
+每一天，我们都会按给出重量的顺序往传送带上装载包裹。
 
-返回能在 D 天内将传送带上的所有包裹送达的船的最低运载能力。
+我们装载的重量不会超过船的最大运载重量。
+
+返回能在 `D` 天内将传送带上的所有包裹送达的船的最低运载能力。
 
 
 示例 1：
@@ -56,8 +59,8 @@ Tag : 「二分」
 ```
 
 提示：
-* 1 <= D <= weights.length <= 5 * $10^4$
-* 1 <= `weights[i]` <= 500
+* $1 <= D <= weights.length <= 5 \times 10^4$
+* $1 <= weights[i] <= 500$
 
 ---
 
@@ -67,7 +70,7 @@ Tag : 「二分」
 * 数值范围在 $(-\infty, ans)$ 的运力必然「不满足」 `D` 天内运送完所有包裹的要求
 * 数值范围在 $[ans, +\infty)$ 的运力必然「满足」 `D`天内运送完所有包裹的要求
 
-**即我们可以通过「二分」来找到恰好满足 `D`天内运送完所有包裹的分割点 `ans`。**
+**我们可以通过「二分」来找到恰好满足 `D`天内运送完所有包裹的分割点 `ans`。**
 
 接下来我们要确定二分的范围，由于不存在包裹拆分的情况，考虑如下两种边界情况：
 * 理论最低运力：只确保所有包裹能够被运送，自然也包括重量最大的包裹，此时理论最低运力为 `max`，`max` 为数组 `weights` 中的最大值
@@ -75,38 +78,107 @@ Tag : 「二分」
 
 **由此，我们可以确定二分的范围为 $[max, sum]$。**
 
-代码：
+Java 代码：
 ```Java
 class Solution {
-    public int shipWithinDays(int[] ws, int d) {
+    public int shipWithinDays(int[] weights, int days) {
         int max = 0, sum = 0;
-        for (int w : ws) {
+        for (int w : weights) {
             max = Math.max(max, w);
             sum += w;
         }
         int l = max, r = sum;
         while (l < r) {
             int mid = l + r >> 1;
-            if (check(ws, mid, d)) {
-                r = mid;
-            } else {
-                l = mid + 1;
-            }
+            if (check(weights, mid, days)) r = mid;
+            else l = mid + 1;
         }
         return r;
     }
-    boolean check(int[] ws, int t, int d) {
-        int n = ws.length;
-        int cnt = 1;
-        for (int i = 1, sum = ws[0]; i < n; sum = 0, cnt++) {
-            while (i < n && sum + ws[i] <= t) {
-                sum += ws[i];
-                i++;
-            }
+    boolean check(int[] weights, int t, int days) {
+        int n = weights.length, cnt = 1;
+        for (int i = 1, sum = weights[0]; i < n; sum = 0, cnt++) {
+            while (i < n && sum + weights[i] <= t) sum += weights[i++];
         }
-        return cnt - 1 <= d;
+        return cnt - 1 <= days;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int shipWithinDays(vector<int>& weights, int days) {
+        int maxv = 0, sum = 0;
+        for (int w : weights) {
+            maxv = max(maxv, w);
+            sum += w;
+        }
+        int l = maxv, r = sum;
+        while (l < r) {
+            int mid = l + r >> 1;
+            if (check(weights, mid, days)) r = mid;    
+            else l = mid + 1;
+        }
+        return r;
+    }
+    bool check(vector<int>& weights, int t, int days) {
+        int n = weights.size(), cnt = 1;
+        for (int i = 1, sum = weights[0]; i < n; sum = 0, cnt++) {
+            while (i < n && sum + weights[i] <= t) sum += weights[i++];
+        }
+        return cnt - 1 <= days;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def shipWithinDays(self, weights: List[int], days: int) -> int:
+        def check(weights: List[int], t: int, days: int) -> bool:
+            n, cnt = len(weights), 1
+            i, sumv = 1, weights[0]
+            while i < n:
+                while i < n and sumv + weights[i] <= t:
+                    sumv += weights[i]
+                    i += 1
+                cnt += 1
+                sumv = 0
+            return cnt - 1 <= days
+
+        maxv, sumv = max(weights), sum(weights)
+        l, r = maxv, sumv
+        while l < r:
+            mid = l + r >> 1
+            if check(weights, mid, days):
+                r = mid
+            else:
+                l = mid + 1
+        return r
+```
+TypeScript 代码：
+```TypeScript
+function shipWithinDays(weights: number[], days: number): number {
+    const check = function(weights: number[], t: number, days: number): boolean {
+        let n = weights.length, cnt = 1;
+        for (let i = 1, sum = weights[0]; i < n; sum = 0, cnt++) {
+            while (i < n && sum + weights[i] <= t) sum += weights[i++];
+        }
+        return cnt - 1 <= days;
+    }
+    let maxv = 0, sumv = 0;
+    for (const w of weights) {
+        maxv = Math.max(maxv, w);
+        sumv += w;
+    }
+    let l = maxv, r = sumv;
+    while (l < r) {
+        const mid = l + r >> 1;
+        if (check(weights, mid, days)) r = mid;
+        else l = mid + 1;
+    }
+    return r;
+};
 ```
 * 时间复杂度：二分范围为 $[max, sum]$，`check` 函数的复杂度为 $O(n)$。整体复杂度为 $O(n\log({\sum_{i= 0}^{n - 1}ws[i]}))$
 * 空间复杂度：$O(1)$ 
@@ -122,62 +194,102 @@ class Solution {
 
 *PS. 由于二分查找具有折半效率，因此「确立粗略二分范围」不会比「通过循环取得精确二分范围」效率低。*
 
-代码：
+Java 代码：
 ```Java
 class Solution {
-    public int shipWithinDays(int[] ws, int d) {
+    public int shipWithinDays(int[] weights, int days) {
         int l = 1, r = (int)1e8;
         while (l < r) {
             int mid = l + r >> 1;
-            if (check(ws, mid, d)) {
-                r = mid;
-            } else {
-                l = mid + 1;
-            }
+            if (check(weights, mid, days)) r = mid;    
+            else l = mid + 1;
         }
         return r;
     }
-    boolean check(int[] ws, int t, int d) {
-        if (ws[0] > t) return false;
-        int n = ws.length;
-        int cnt = 1;
-        for (int i = 1, sum = ws[0]; i < n; sum = 0, cnt++) {
-            if (ws[i] > t) return false;
-            while (i < n && sum + ws[i] <= t) {
-                sum += ws[i];
-                i++;
-            }
+    boolean check(int[] weights, int t, int days) {
+        if (weights[0] > t) return false;
+        int n = weights.length, cnt = 1;
+        for (int i = 1, sum = weights[0]; i < n; sum = 0, cnt++) {
+            if (weights[i] > t) return false;
+            while (i < n && sum + weights[i] <= t) sum += weights[i++];
         }
-        return cnt - 1 <= d;
+        return cnt - 1 <= days;
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int shipWithinDays(vector<int>& weights, int days) {
+        int l = 1, r = 1e8;
+        while (l < r) {
+            int mid = l + r >> 1;
+            if (check(weights, mid, days)) r = mid;    
+            else l = mid + 1;
+        }
+        return r;
+    }
+    bool check(vector<int>& weights, int t, int days) {
+        if (weights[0] > t) return false;
+        int n = weights.size(), cnt = 1;
+        for (int i = 1, sum = weights[0]; i < n; sum = 0, cnt++) {
+            if (weights[i] > t) return false;
+            while (i < n && sum + weights[i] <= t) sum += weights[i++];
+        }
+        return cnt - 1 <= days;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def shipWithinDays(self, weights: List[int], days: int) -> int:
+        def check(weights: List[int], t: int, days: int) -> bool:
+            if weights[0] > t: return False
+            n, cnt = len(weights), 1
+            i, sumv = 1, weights[0]
+            while i < n:
+                if weights[i] > t: return False
+                while i < n and sumv + weights[i] <= t:
+                    sumv += weights[i]
+                    i += 1
+                cnt += 1
+                sumv = 0
+            return cnt - 1 <= days
+
+        l, r = 1, 10**8
+        while l < r:
+            mid = l + r >> 1
+            if check(weights, mid, days):
+                r = mid
+            else:
+                l = mid + 1
+        return r
+```
+TypeScript 代码：
+```TypeScript
+function shipWithinDays(weights: number[], days: number): number {
+    const check = function(weights: number[], t: number, days: number): boolean {
+        if (weights[0] > t) return false;
+        let n = weights.length, cnt = 1;
+        for (let i = 1, sum = weights[0]; i < n; sum = 0, cnt++) {
+            if (weights[i] > t) return false;
+            while (i < n && sum + weights[i] <= t) sum += weights[i++];
+        }
+        return cnt - 1 <= days;
+    }
+    let l = 0, r = 1e8;
+    while (l < r) {
+        const mid = l + r >> 1;
+        if (check(weights, mid, days)) r = mid;
+        else l = mid + 1;
+    }
+    return r;
+};
+```
 * 时间复杂度：二分范围为 $[1, 1e8]$，`check` 函数的复杂度为 $O(n)$。整体复杂度为 $O(n\log{1e8})$
 * 空间复杂度：$O(1)$ 
-
----
-
-### 其他「二分」相关题解
-
-* 二分模板
-    [29. 两数相除](https://leetcode-cn.com/problems/divide-two-integers/) : [二分 + 倍增乘法解法（含模板）](https://leetcode-cn.com/problems/divide-two-integers/solution/shua-chuan-lc-er-fen-bei-zeng-cheng-fa-j-m73b/)
-
-* 二分本质 & 恢复二段性处理
-
-    [33. 搜索旋转排序数组（找目标值）](https://leetcode-cn.com/problems/search-in-rotated-sorted-array/) : [严格 O(logN)，一起看清二分的本质](https://leetcode-cn.com/problems/search-in-rotated-sorted-array/solution/shua-chuan-lc-yan-ge-ologn100yi-qi-kan-q-xifo/)
-
-    [81. 搜索旋转排序数组 II（找目标值）](https://leetcode-cn.com/problems/search-in-rotated-sorted-array-ii/) : [详解为何元素相同会导致 O(n)，一起看清二分的本质](https://leetcode-cn.com/problems/search-in-rotated-sorted-array-ii/solution/gong-shui-san-xie-xiang-jie-wei-he-yuan-xtam4/)
-
-    [153. 寻找旋转排序数组中的最小值（找最小值）](https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array/) : [严格 O(logN)，一起看清二分的本质](https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array/solution/gong-shui-san-xie-yan-ge-olognyi-qi-kan-6d969/)
-
-    [154. 寻找旋转排序数组中的最小值 II（找最小值）](https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array-ii/) : [详解为何元素相同会导致 O(n)，一起看清二分的本质](https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array-ii/solution/gong-shui-san-xie-xiang-jie-wei-he-yuan-7xbty/)
-
-* 二分 check 函数如何确定
-    [34. 在排序数组中查找元素的第一个和最后一个位置](https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array/) : [考察对「二分」的理解，以及 check 函数的「大于 小于」怎么写](https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array/solution/gong-shui-san-xie-kao-cha-dui-er-fen-de-86bk0/)
-
-* 二分答案的题目
-    [1482. 制作 m 束花所需的最少天数](https://leetcode-cn.com/problems/minimum-number-of-days-to-make-m-bouquets/) : [利用「二段性」找分割点，以及优化 check 函数](https://leetcode-cn.com/problems/minimum-number-of-days-to-make-m-bouquets/solution/gong-shui-san-xie-li-yong-er-duan-xing-z-ysv4/)
-    [1011. 在 D 天内送达包裹的能力](https://leetcode-cn.com/problems/capacity-to-ship-packages-within-d-days/) : [利用「二段性」找分割点，以及如何确定「二分范围」](https://leetcode-cn.com/problems/capacity-to-ship-packages-within-d-days/solution/gong-shui-san-xie-li-yong-er-duan-xing-z-95zj/)
 
 ---
 
