--- a/LeetCode/1041-1050/1049. 最后一块石头的重量 II（中等）.md
+++ b/LeetCode/1041-1050/1049. 最后一块石头的重量 II（中等）.md
@@ -7,14 +7,17 @@ Tag : 「动态规划」、「背包问题」、「01 背包」、「数学」
 
 
 
-有一堆石头，用整数数组 stones 表示。其中 stones[i] 表示第 i 块石头的重量。
+有一堆石头，用整数数组 `stones` 表示。
 
-每一回合，从中选出任意两块石头，然后将它们一起粉碎。假设石头的重量分别为 x 和 y，且 x <= y。那么粉碎的可能结果如下：
-* 如果 x == y，那么两块石头都会被完全粉碎；
-* 如果 x != y，那么重量为 x 的石头将会完全粉碎，而重量为 y 的石头新重量为 y-x。
+其中 `stones[i]` 表示第 `i` 块石头的重量。
 
-最后，最多只会剩下一块 石头。返回此石头 最小的可能重量 。如果没有石头剩下，就返回 0。
+每一回合，从中选出任意两块石头，然后将它们一起粉碎。假设石头的重量分别为 `x` 和 `y`，且 `x <= y`。那么粉碎的可能结果如下：
+* 如果 `x == y`，那么两块石头都会被完全粉碎；
+* 如果 `x != y`，那么重量为 `x` 的石头将会完全粉碎，而重量为 `y` 的石头新重量为 `y-x`。
 
+最后，最多只会剩下一块 石头。返回此石头最小的可能重量 。
+
+如果没有石头剩下，就返回 `0`。
 
 示例 1：
 ```
@@ -38,8 +41,8 @@ Tag : 「动态规划」、「背包问题」、「01 背包」、「数学」
 ```
 
 提示：
-* 1 <= stones.length <= 30
-* 1 <= stones[i] <= 100
+* $1 <= stones.length <= 30$
+* $1 <= stones[i] <= 100$
 
 ---
 
@@ -167,8 +170,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n * \sum_{i = 0}^{n - 1} stones[i])$
-* 空间复杂度：$O(n * \sum_{i = 0}^{n - 1} stones[i])$
+* 时间复杂度：$O(n \times \sum_{i = 0}^{n - 1} stones[i])$
+* 空间复杂度：$O(n \times \sum_{i = 0}^{n - 1} stones[i])$
 
 ---
 
