--- a/LeetCode/11-20/15. 三数之和（中等）.md
+++ b/LeetCode/11-20/15. 三数之和（中等）.md
@@ -51,7 +51,7 @@ Tag : 「双指针」、「排序」、「n 数之和」
 
 由于题目要求答案不能包含重复的三元组，所以在确定第一个数和第二个数的时候，要跳过数值一样的下标（在三数之和确定的情况下，确保第一个数和第二个数不会重复，即可保证三元组不重复）。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
@@ -78,6 +78,85 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<vector<int>> threeSum(vector<int>& nums) {
+        sort(nums.begin(), nums.end());
+        int n = nums.size();
+        vector<vector<int>> ans;
+        for (int i = 0; i < n; i++) {
+            if (i > 0 && nums[i] == nums[i - 1]) continue;
+            int j = i + 1, k = n - 1;
+            while (j < k) {
+                while (j > i + 1 && j < n && nums[j] == nums[j - 1]) j++;
+                if (j >= k) break;
+                int sum = nums[i] + nums[j] + nums[k];
+                if (sum == 0) {
+                    ans.push_back({nums[i], nums[j], nums[k]});
+                    j++;
+                } else if (sum > 0) {
+                    k--;
+                } else if (sum < 0) {
+                    j++;
+                }
+            }
+        }
+        return ans;   
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def threeSum(self, nums: List[int]) -> List[List[int]]:
+        nums.sort()
+        n = len(nums)
+        ans = []
+        for i in range(n):
+            if i > 0 and nums[i] == nums[i - 1]: continue
+            j, k = i + 1, n - 1
+            while j < k:
+                while j > i + 1 and j < n and nums[j] == nums[j - 1]:
+                    j += 1
+                if j >= k: break
+                _sum = nums[i] + nums[j] + nums[k]
+                if _sum == 0:
+                    ans.append([nums[i], nums[j], nums[k]])
+                    j += 1
+                elif _sum > 0:
+                    k -= 1
+                elif _sum < 0:
+                    j += 1
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function threeSum(nums: number[]): number[][] {
+    nums.sort((a, b) => a - b);
+    const n = nums.length;
+    const ans = [];
+    for (let i = 0; i < n; i++) {
+        if (i > 0 && nums[i] === nums[i - 1]) continue;
+        let j = i + 1, k = n - 1;
+        while (j < k) {
+            while (j > i + 1 && j < n && nums[j] === nums[j - 1]) j++;
+            if (j >= k) break;
+            const sum = nums[i] + nums[j] + nums[k];
+            if (sum === 0) {
+                ans.push([nums[i], nums[j], nums[k]]);
+                j++;
+            } else if (sum > 0) {
+                k--;
+            } else if (sum < 0) {
+                j++;
+            }
+        }
+    }
+    return ans;
+};
 ```
 * 时间复杂度：排序的复杂度为 $O(n\log{n})$，对于每个 `i` 而言，最坏的情况 `j` 和 `k` 都要扫描一遍数组的剩余部分，复杂度为 $O(n^2)$。整体复杂度为 $O(n^2)$
 * 空间复杂度：$O(\log{n})$
