--- a/LeetCode/121-130/127. 单词接龙（困难）.md
+++ b/LeetCode/121-130/127. 单词接龙（困难）.md
@@ -68,7 +68,7 @@ Tag : 「双向 BFS」、「启发式搜索」、「AStar 算法」
 
 朴素的 BFS 可能会带来「搜索空间爆炸」的情况。
 
-想象一下，如果我们的 `wordList` 足够丰富（包含了所有单词），对于一个长度为 $10$ 的 `beginWord​` 替换一次字符可以产生 $10 * 25$ 个新单词（每个替换点可以替换另外 $25$ 个小写字母），第一层就会产生 $250$ 个单词；第二层会产生超过 $6 * 10^4$ 个新单词 ...
+想象一下，如果我们的 `wordList` 足够丰富（包含了所有单词），对于一个长度为 $10$ 的 `beginWord` 替换一次字符可以产生 $10 \times 25$ 个新单词（每个替换点可以替换另外 $25$ 个小写字母），第一层就会产生 $250$ 个单词；第二层会产生超过 $6 \times 10^4$ 个新单词 ...
 
 **随着层数的加深，这个数字的增速越快，这就是「搜索空间爆炸」问题。**
 
@@ -117,17 +117,15 @@ void update(Deque d, Map cur, Map other) {}
 
 建议大家带着对「双向 BFS」的基本理解去阅读。
 
-代码：
-
+Java 代码：
 ```Java
 class Solution {
     String s, e;
     Set<String> set = new HashSet<>();
-    public int ladderLength(String _s, String _e, List<String> ws) {
-        s = _s;
-        e = _e;
+    public int ladderLength(String beginWord, String endWord, List<String> wordList) {
+        s = beginWord; e = endWord;
         // 将所有 word 存入 set，如果目标单词不在 set 中，说明无解
-        for (String w : ws) set.add(w);
+        for (String w : wordList) set.add(w);
         if (!set.contains(e)) return 0;
         int ans = bfs();
         return ans == -1 ? 0 : ans + 1;
@@ -204,6 +202,98 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    string s, e;
+    unordered_set<string> wordSet;
+    int ladderLength(string beginWord, string endWord, vector<string>& wordList) {
+        s = beginWord; e = endWord;
+        for (string w : wordList) wordSet.insert(w);
+        if (wordSet.find(e) == wordSet.end()) return 0;
+        int ans = bfs();
+        return ans == -1 ? 0 : ans + 1;
+    }
+    int bfs() {
+        deque<string> dq1, dq2;
+        unordered_map<string, int> m1, m2;
+        dq1.push_back(s);
+        m1[s] = 0;
+        dq2.push_back(e);
+        m2[e] = 0;
+        while (!dq1.empty() && !dq2.empty()) {
+            int t = -1;
+            if (dq1.size() <= dq2.size()) t = update(dq1, m1, m2);
+            else t = update(dq2, m2, m1);
+            if (t != -1) return t;
+        }
+        return -1;
+    }
+    int update(deque<string>& dq, unordered_map<string, int>& cur, unordered_map<string, int>& other) {
+        int m = dq.size();
+        while (m-- > 0) {
+            string poll = dq.front();
+            dq.pop_front();
+            int n = poll.length();
+            for (int i = 0; i < n; i++) {
+                for (int j = 0; j < 26; j++) {
+                    string sub = poll.substr(0, i) + static_cast<char>('a' + j) + poll.substr(i + 1);
+                    if (wordSet.find(sub) != wordSet.end()) {
+                        if (cur.find(sub) != cur.end() && cur[sub] <= cur[poll] + 1) continue;
+                        if (other.find(sub) != other.end()) {
+                            return cur[poll] + 1 + other[sub];
+                        } else {
+                            dq.push_back(sub);
+                            cur[sub] = cur[poll] + 1;
+                        }
+                    }
+                }
+            }
+        }
+        return -1;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def ladderLength(self, beginWord: str, endWord: str, wordList: List[str]) -> int:
+        def bfs():
+            dq1, dq2 = deque(), deque()
+            m1, m2 = {}, {}
+            dq1.append(s)
+            m1[s] = 0
+            dq2.append(e)
+            m2[e] = 0
+            while dq1 and dq2:
+                t = update(dq1, m1, m2) if len(dq1) <= len(dq2) else update(dq2, m2, m1)
+                if t != -1: return t
+            return -1
+
+        def update(dq, cur, other):
+            m = len(dq)
+            for _ in range(m):
+                poll = dq.popleft()
+                n = len(poll)
+                for i in range(n):
+                    for j in range(26):
+                        sub = poll[:i] + chr(ord('a') + j) + poll[i+1:]
+                        if sub in wordSet:
+                            if sub in cur and cur[sub] <= cur[poll] + 1: continue
+                            if sub in other:
+                                return cur[poll] + 1 + other[sub]
+                            else:
+                                dq.append(sub)
+                                cur[sub] = cur[poll] + 1
+            return -1
+
+        s, e = beginWord, endWord
+        wordSet = set(wordList)
+        if e not in wordSet: return 0
+        ans = bfs()
+        return 0 if ans == -1 else ans + 1
+```
 * 时间复杂度：令 `wordList` 长度为 $n$，`beginWord` 字符串长度为 $m$。由于所有的搜索结果必须都在 `wordList` 出现过，因此算上起点最多有 $n + 1$ 节点，最坏情况下，所有节点都联通，搜索完整张图复杂度为 $O(n^2)$ ；从 `beginWord` 出发进行字符替换，替换时进行逐字符检查，复杂度为 $O(m)$。整体复杂度为 $O(m \times n^2)$
 * 空间复杂度：同等空间大小。$O(m \times n^2)$
 
@@ -219,7 +309,7 @@ class Solution {
 
 ---
 
-### 【补充】启发式搜索 AStar
+### 启发式搜索 `AStar`
 
 可以直接根据本题规则来设计 AStar 的「启发式函数」。
 
@@ -229,7 +319,7 @@ class Solution {
 
 注意：本题数据比较弱，用 AStar  过了，但通常我们需要「确保有解」，AStar  的启发搜索才会发挥真正价值。而本题，除非 `endWord` 本身就不在 `wordList` 中，其余情况我们无法很好提前判断「是否有解」。这时候 AStar  将不能带来「搜索空间的优化」，效果不如「双向 BFS」。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     class Node {
@@ -243,10 +333,9 @@ class Solution {
     String s, e;
     int INF = 0x3f3f3f3f;
     Set<String> set = new HashSet<>();
-    public int ladderLength(String _s, String _e, List<String> ws) {
-        s = _s;
-        e = _e;
-        for (String w : ws) set.add(w);
+    public int ladderLength(String beginWord, String endWord, List<String> wordList) {
+        s = beginWord; e = endWord;
+        for (String w : wordList) set.add(w);
         if (!set.contains(e)) return 0;
         int ans = astar();
         return ans == -1 ? 0 : ans + 1;
@@ -288,6 +377,62 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    struct Node {
+        string str;
+        int val;
+        Node(string _str, int _val) : str(_str), val(_val) {}
+    };
+
+    string s, e;
+    const int INF = 0x3f3f3f3f;
+    unordered_set<string> set;
+
+    int ladderLength(string beginWord, string endWord, vector<string>& wordList) {
+        s = beginWord; e = endWord;
+        for (const string& w : wordList) set.insert(w);
+        if (set.find(e) == set.end()) return 0;
+        int ans = astar();
+        return ans == -1 ? 0 : ans + 1;
+    }
+    int astar() {
+        priority_queue<Node, vector<Node>, function<bool(Node, Node)>> q([](Node a, Node b) {
+            return a.val > b.val;
+        });
+        unordered_map<string, int> dist;
+        dist[s] = 0;
+        q.push(Node(s, f(s)));
+        while (!q.empty()) {
+            Node poll = q.top();
+            q.pop();
+            string str = poll.str;
+            int distance = dist[str];
+            if (str == e) break;
+            int n = str.length();
+            for (int i = 0; i < n; i++) {
+                for (int j = 0; j < 26; j++) {
+                    string sub = str.substr(0, i) + char('a' + j) + str.substr(i + 1);
+                    if (set.find(sub) == set.end()) continue;
+                    if (dist.find(sub) == dist.end() || dist[sub] > distance + 1) {
+                        dist[sub] = distance + 1;
+                        q.push(Node(sub, dist[sub] + f(sub)));
+                    }
+                }
+            }
+        }
+        return dist.find(e) != dist.end() ? dist[e] : -1;
+    }
+    int f(string str) {
+        if (str.length() != e.length()) return INF;
+        int n = str.length(), ans = 0;
+        for (int i = 0; i < n; i++) ans += str[i] == e[i] ? 0 : 1;
+        return ans;
+    }
+};
 ```
 * 时间复杂度：启发式搜索分析时空复杂度意义不大
 * 空间复杂度：启发式搜索分析时空复杂度意义不大
