--- a/LeetCode/131-140/131. 分割回文串（中等）.md
+++ b/LeetCode/131-140/131. 分割回文串（中等）.md
@@ -6,11 +6,11 @@ Tag : 「回文串」、「回溯算法」、「动态规划」
 
 
 
-给你一个字符串 `s`，请你将 `s` 分割成一些子串，使每个子串都是 回文串 。
+给你一个字符串 `s`，请你将 `s` 分割成一些子串，使每个子串都是回文串。
 
 返回 `s` 所有可能的分割方案。
 
-回文串 是正着读和反着读都一样的字符串。
+回文串是正着读和反着读都一样的字符串。
 
 示例 1：
 ```
@@ -78,8 +78,8 @@ Tag : 「回文串」、「回溯算法」、「动态规划」
 
 因此，我们的遍历过程可以整理为：**右端点 `j` 一直往右移动（从小到大），在 `j` 固定情况下，左端点 `i` 在 `j` 在左边开始，一直往左移动（从大到小）**
 
-代码：
-```java
+Java 代码：
+```Java
 class Solution {
     public List<List<String>> partition(String s) {
         int n = s.length();
@@ -128,10 +128,106 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：动态规划预处理的复杂度为 $O(n^2)$；爆搜过程中每个字符都可以作为分割点，并且有分割与不分割两种选择，方案数量为 $2^{n - 1}$，每个字符都需要往后检查剩余字符的分割情况，复杂度为 $O(n)$。整体复杂度为 $O(n * 2^n)$
-* 空间复杂度：动态规划部分的复杂度为 $O(n^2)$；方案数量最多为 $2^{n - 1}$，每个方案都是完整字符串 `s` 的分割，复杂度为 $O(n)$，整体复杂度为 $O(n * 2^n)$
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<vector<string>> partition(string s) {
+        int n = s.length();
+        vector<vector<string>> ans;
+        vector<string> cur;
+        vector<vector<bool>> f(n, vector<bool>(n, false));
+        for (int j = 0; j < n; j++) {
+            for (int i = j; i >= 0; i--) {
+                if (i == j) {
+                    f[i][j] = true;
+                } else if (j - i + 1 == 2) {
+                    f[i][j] = s[i] == s[j];
+                } else {
+                    f[i][j] = s[i] == s[j] && f[i + 1][j - 1];
+                }
+            }
+        }
+        dfs(s, 0, ans, cur, f);
+        return ans;
+    }
+    void dfs(string& s, int u, vector<vector<string>>& ans, vector<string>& cur, vector<vector<bool>>& f) {
+        int n = s.length();
+        if (u == n) ans.push_back(cur);
+        for (int i = u; i < n; i++) {
+            if (f[u][i]) {
+                cur.push_back(s.substr(u, i - u + 1));
+                dfs(s, i + 1, ans, cur, f);
+                cur.pop_back();
+            }
+        }
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def partition(self, s: str) -> List[List[str]]:
+        def dfs(s: str, u: int, ans: List[List[str]], cur: List[str], f: List[List[bool]]):
+            n = len(s)
+            if u == n:
+                ans.append(cur[:])
+            for i in range(u, n):
+                if f[u][i]:
+                    cur.append(s[u:i + 1])
+                    dfs(s, i + 1, ans, cur, f)
+                    cur.pop()
 
-***
+        n = len(s)
+        ans, cur = [], []
+        f = [[False] * n for _ in range(n)]
+        for j in range(n):
+            for i in range(j, -1, -1):
+                if i == j:
+                    f[i][j] = True
+                elif j - i + 1 == 2:
+                    f[i][j] = s[i] == s[j]
+                else:
+                    f[i][j] = s[i] == s[j] and f[i + 1][j - 1]
+        dfs(s, 0, ans, cur, f)
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function partition(s: string): string[][] {
+    const dfs = function(s: string, u: number, ans: string[][], cur: string[], f: boolean[][]): void {
+        const n = s.length;
+        if (u == n) ans.push([...cur]);
+        for (let i = u; i < n; i++) {
+            if (f[u][i]) {
+                cur.push(s.substring(u, i + 1));
+                dfs(s, i + 1, ans, cur, f);
+                cur.pop();
+            }
+        }
+    };
+    const n = s.length;
+    const ans = [], cur = [];
+    const f = Array.from({ length: n }, () => Array(n).fill(false));
+    for (let j = 0; j < n; j++) {
+        for (let i = j; i >= 0; i--) {
+            if (i == j) {
+                f[i][j] = true;
+            } else if (j - i + 1 === 2) {
+                f[i][j] = s[i] == s[j];
+            } else {
+                f[i][j] = s[i] == s[j] && f[i + 1][j - 1];
+            }
+        }
+    }
+    dfs(s, 0, ans, cur, f);
+    return ans;
+};
+```
+* 时间复杂度：动态规划预处理的复杂度为 $O(n^2)$；爆搜过程中每个字符都可以作为分割点，并且有分割与不分割两种选择，方案数量为 $2^{n - 1}$，每个字符都需要往后检查剩余字符的分割情况，复杂度为 $O(n)$。整体复杂度为 $O(n \times 2^n)$
+* 空间复杂度：动态规划部分的复杂度为 $O(n^2)$；方案数量最多为 $2^{n - 1}$，每个方案都是完整字符串 `s` 的分割，复杂度为 $O(n)$，整体复杂度为 $O(n \times 2^n)$
+
+---
 
 ### 总结
 
@@ -183,23 +279,6 @@ void dfs(选择列表, 路径(当前结果), 结果集) {
     }
 }
 ```
-
-***
-
-### 拓展
-
-刚好最近在更新「回溯算法」的相关题解，以下题目可以加深你对「回溯」算法的理解和模板的运用：
-
-[17. 电话号码的字母组合(中等)](https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number/) : [从一道「回溯算法」经典题与你分享回溯算法的基本套路](https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number/solution/shua-chuan-lc-dfs-hui-su-jie-fa-by-ac_oi-qa02/)
-
-[39. 组合总和(中等)](https://leetcode-cn.com/problems/combination-sum/) : [DFS + 回溯算法，以及如何确定一道题是否应该使用 DFS + 回溯来求解](https://leetcode-cn.com/problems/combination-sum/solution/dfs-hui-su-suan-fa-yi-ji-ru-he-que-ding-wpbo5/)
-
-[40. 组合总和 II(中等)](https://leetcode-cn.com/problems/combination-sum-ii/) : [【回溯算法】求目标和的组合方案（升级篇）](https://leetcode-cn.com/problems/combination-sum-ii/solution/hui-su-suan-fa-qiu-mu-biao-he-de-zu-he-f-1iys/)
-
-[216. 组合总和 III(中等)](https://leetcode-cn.com/problems/combination-sum-iii/) : [【回溯算法】借助最后一道「组合总和」问题来总结一下回溯算法](https://leetcode-cn.com/problems/combination-sum-iii/solution/hui-su-suan-fa-jie-zhu-zui-hou-yi-dao-zu-n1lo/)
-
-[37. 解数独(困难)](https://leetcode-cn.com/problems/sudoku-solver/) : [【数独问题】经典面试题：解数独](https://leetcode-cn.com/problems/sudoku-solver/solution/he-n-huang-hou-yi-yang-shi-yi-dao-hui-su-lfpd/)
-
 
 ---
 
