--- a/LeetCode/161-170/168. Excel表列名称（简单）.md
+++ b/LeetCode/161-170/168. Excel表列名称（简单）.md
@@ -4,6 +4,8 @@
 
 Tag : 「模拟」
 
+
+
 给定一个正整数，返回它在 Excel 表中相对应的列名称。
 
 例如，
@@ -45,20 +47,47 @@ Tag : 「模拟」
 
 但本题需要我们将从 $1$ 开始，因此在执行「进制转换」操作前，我们需要先对 $columnNumber$ 执行减一操作，从而实现整体偏移。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
-    public String convertToTitle(int cn) {
+    public String convertToTitle(int columnNumber) {
         StringBuilder sb = new StringBuilder();
-        while (cn > 0) {
-            cn--;
-            sb.append((char)(cn % 26 + 'A'));
-            cn /= 26;
+        while (columnNumber > 0) {
+            columnNumber--;
+            sb.append((char)(columnNumber % 26 + 'A'));
+            columnNumber /= 26;
         }
         sb.reverse();
         return sb.toString();
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    string convertToTitle(int columnNumber) {
+        string sb;
+        while (columnNumber > 0) {
+            columnNumber--;
+            sb.push_back((char)(columnNumber % 26 + 'A'));
+            columnNumber /= 26;
+        }
+        reverse(sb.begin(), sb.end());
+        return sb;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def convertToTitle(self, columnNumber: int) -> str:
+        sb = ""
+        while columnNumber > 0:
+            columnNumber -= 1
+            sb += chr((columnNumber % 26) + ord('A'))
+            columnNumber //= 26
+        return sb[::-1]
 ```
 * 时间复杂度：$O(\log_{26}{cn})$
 * 空间复杂度：不算构造答案所消耗的空间，复杂度为 $O(1)$
