--- a/LeetCode/1771-1780/1775. 通过最少操作次数使数组的和相等（中等）.md
+++ b/LeetCode/1771-1780/1775. 通过最少操作次数使数组的和相等（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1775. 通过最少操作次数使数组的和相等量](https://www.acoier.com/2022/12/09/1775.%20%E9%80%9A%E8%BF%87%E6%9C%80%E5%B0%91%E6%93%8D%E4%BD%9C%E6%AC%A1%E6%95%B0%E4%BD%BF%E6%95%B0%E7%BB%84%E7%9A%84%E5%92%8C%E7%9B%B8%E7%AD%89%EF%BC%88%E4%B8%AD%E7%AD%89%EF%BC%89/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[1775. 通过最少操作次数使数组的和相等量](https://leetcode.cn/problems/equal-sum-arrays-with-minimum-number-of-operations/solutions/2582561/gong-shui-san-xie-fen-qing-kuang-tao-lun-saa1/)** ，难度为 **中等**。
 
 Tag : 「枚举」、「贪心」、「数学」
 
@@ -109,6 +109,45 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int c1[10], c2[10];
+    int s1, s2;
+    int minOperations(vector<int>& nums1, vector<int>& nums2) {
+        int n = nums1.size(), m = nums2.size();
+        if (n > m) return minOperations(nums2, nums1);
+        if (m > 6 * n) return -1;
+        for (int x : nums1) {
+            c1[x]++; s1 += x;
+        }
+        for (int x : nums2) {
+            c2[x]++; s2 += x;
+        }
+        int ans = n + m;
+        for (int i = m; i <= 6 * n; i++) {
+            ans = min(ans, getCnt(c1, s1, i) + getCnt(c2, s2, i));
+        }
+        return ans;
+    }
+    int getCnt(int cnts[], int sum, int x) {
+        int ans = 0;
+        if (sum > x) {
+            for (int i = 6, d = sum - x; i >= 2 && d > 0; i--) {
+                int c = min((int) ceil(d * 1.0 / (i - 1)), cnts[i]);
+                ans += c; d -= c * (i - 1);
+            }
+        } else if (sum < x) {
+            for (int i = 1, d = x - sum; i <= 5 && d > 0; i++) {
+                int c = min((int) ceil(d * 1.0 / (6 - i)), cnts[i]);
+                ans += c; d -= c * (6 - i);
+            }
+        }
+        return ans;
+    }
+};
 ```
 Python 代码：
 ```Python 
