--- a/LeetCode/1791-1800/1798. 你能构造出连续值的最大数目（中等）.md
+++ b/LeetCode/1791-1800/1798. 你能构造出连续值的最大数目（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1798. 你能构造出连续值的最大数目]()** ，难度为 **中等**。
+这是 LeetCode 上的 **[1798. 你能构造出连续值的最大数目](https://leetcode.cn/problems/maximum-number-of-consecutive-values-you-can-make/solutions/2607482/gong-shui-san-xie-shu-xue-lei-gou-zao-ti-wf47/)** ，难度为 **中等**。
 
 Tag : 「数学」、「脑筋急转弯」、「排序」、「构造」
 
@@ -86,6 +86,32 @@ class Solution {
         return ans + 1;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int getMaximumConsecutive(vector<int>& coins) {
+        sort(coins.begin(), coins.end());
+        int ans = 0;
+        for (int c : coins) {
+            if (c > ans + 1) break;
+            ans += c;
+        }
+        return ans + 1;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def getMaximumConsecutive(self, coins: List[int]) -> int:
+        coins.sort()
+        ans = 0
+        for c in coins:
+            if c > ans + 1: break
+            ans += c
+        return ans + 1
 ```
 TypeScript 代码：
 ```TypeScript
