--- a/LeetCode/191-200/198. 打家劫舍（中等）.md
+++ b/LeetCode/191-200/198. 打家劫舍（中等）.md
@@ -35,7 +35,7 @@ Tag : 「线性 DP」、「状态机 DP」、「动态规划」
 
 ---
 
-### 状态机线性 DP
+### 状态机 DP
 
 这是一道入门级的状态机线性 DP 题。
 
@@ -61,6 +61,22 @@ class Solution {
         return Math.max(f[n][0], f[n][1]);
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int rob(vector<int>& nums) {
+        int n = nums.size();
+        int f[n + 10][2];
+        f[0][0] = f[0][1] = 0;
+        for (int i = 1; i <= n; i++) {
+            f[i][0] = max(f[i - 1][0], f[i - 1][1]);
+            f[i][1] = f[i - 1][0] + nums[i - 1];
+        }
+        return max(f[n][0], f[n][1]);
+    }
+};
 ```
 TypeScript 代码：
 ```TypeScript
@@ -110,6 +126,22 @@ class Solution {
         return Math.max(f[n & 1][0], f[n & 1][1]);
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int rob(vector<int>& nums) {
+        int n = nums.size();
+        int f[][2] = {{0, 0}, {0, 0}};
+        for (int i = 1; i <= n; i++) {
+            int a = (i - 1) & 1, b = i & 1;
+            f[b][0] = max(f[a][0], f[a][1]);
+            f[b][1] = f[a][0] + nums[i - 1];
+        }
+        return max(f[n & 1][0], f[n & 1][1]);
+    }
+};
 ```
 TypeScript 代码：
 ```TypeScript
