--- a/LeetCode/21-30/25. K 个一组翻转链表（困难）.md
+++ b/LeetCode/21-30/25. K 个一组翻转链表（困难）.md
@@ -55,7 +55,7 @@ Tag : 「递归」、「迭代」、「链表」
 
 ---
 
-### 迭代解法（哨兵技巧）
+### 迭代（哨兵技巧）
 
 哨兵技巧我们在前面的多道链表题讲过，让三叶来帮你回忆一下：
 
@@ -89,7 +89,7 @@ Tag : 「递归」、「迭代」、「链表」
 回到主方法，将 `cur` 往前移动 `k` 步，再调用 `reverse(cur, k)` 实现 `k` 个一组翻转：
 ![](https://pic.leetcode-cn.com/1611504265-qZGFAs-640%20(3).png)
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public ListNode reverseKGroup(ListNode head, int k) {
@@ -110,11 +110,10 @@ class Solution {
         ListNode cur = root;
         while (u-- > 0 && cur != null) cur = cur.next;
         if (cur == null) return;
-
         // 进行翻转
         ListNode tail = cur.next;
         ListNode a = root.next, b = a.next;
-        // 当需要翻转 k 个节点时，中间就有 k - 1 个 next 指针需要翻转
+        // 当需要翻转 k 个节点时，中间有 k - 1 个 next 指针需要翻转
         while (k-- > 1) {
             ListNode c = b.next;
             b.next = a;
@@ -126,12 +125,115 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    ListNode* reverseKGroup(ListNode* head, int k) {
+        ListNode* dummy = new ListNode(-1);
+        dummy->next = head;
+        ListNode* cur = dummy;
+        while (cur != NULL) {
+            reverse(cur, k);
+            int u = k;
+            while (u-- > 0 && cur != NULL) cur = cur->next;
+        }
+        return dummy->next;
+    }
+    // reverse 的作用是将 root 后面的 k 个节点进行翻转
+    void reverse(ListNode* root, int k) {
+        // 检查 root 后面是否有 k 个节点
+        int u = k;
+        ListNode* cur = root;
+        while (u-- > 0 && cur != NULL) cur = cur->next;
+        if (cur == NULL) return;
+        // 进行翻转
+        ListNode* tail = cur->next;
+        ListNode* a = root->next, *b = a->next;
+        // 当需要翻转 k 个节点时，中间有 k - 1 个 next 指针需要翻转
+        while (k-- > 1) {
+            ListNode* c = b->next;
+            b->next = a;
+            a = b;
+            b = c;
+        }
+        root->next->next = tail;
+        root->next = a;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def reverseKGroup(self, head: Optional[ListNode], k: int) -> Optional[ListNode]:
+        # reverse 的作用是将 root 后面的 k 个节点进行翻转
+        def reverse(root, k):
+            # 检查 root 后面是否有 k 个节点
+            u, cur = k, root
+            while u > 0 and cur:
+                cur = cur.next
+                u -= 1
+            if not cur: return
+            # 进行翻转
+            tail = cur.next
+            a, b = root.next, root.next.next
+            # 当需要翻转 k 个节点时，中间有 k - 1 个 next 指针需要翻转
+            while k > 1:
+                c, b.next = b.next, a
+                a, b = b, c
+                k -= 1
+            root.next.next = tail
+            root.next = a
+
+        dummy = ListNode(-1)
+        dummy.next = head
+        cur = dummy
+        while cur:
+            reverse(cur, k)
+            u = k
+            while u > 0 and cur:
+                cur = cur.next
+                u -= 1
+        return dummy.next
+```
+TypeScript 代码：
+```TypeScript
+function reverseKGroup(head: ListNode | null, k: number): ListNode | null {
+    // reverse 的作用是将 root 后面的 k 个节点进行翻转
+    const reverse = function(root: ListNode | null, k: number): void {
+        // 检查 root 后面是否有 k 个节点
+        let u = k, cur = root;
+        while (u-- > 0 && cur != null) cur = cur.next;
+        if (cur == null) return;
+        // 进行翻转
+        let tail = cur.next, a = root.next, b = a.next;
+        // 当需要翻转 k 个节点时，中间有 k - 1 个 next 指针需要翻转
+        while (k-- > 1) {
+            let c = b.next;
+            b.next = a;
+            a = b;
+            b = c;
+        }
+        root.next.next = tail;
+        root.next = a;
+    };
+    let dummy = new ListNode(-1);
+    dummy.next = head;
+    let cur = dummy;
+    while (cur != null) {
+        reverse(cur, k);
+        let u = k;
+        while (u-- > 0 && cur != null) cur = cur.next;
+    }
+    return dummy.next;
+};
+```
 * 时间复杂度：会将每个节点处理一遍。复杂度为 $O(n)$
 * 空间复杂度：$O(1)$
 
 ---
 
-### 递归解法
+### 递归
 
 搞懂了较难的「迭代哨兵」版本之后，常规的「递归无哨兵」版本写起来应该更加容易了。
 
@@ -145,7 +247,6 @@ class Solution {
         ListNode p = head;
         while (p != null && u-- > 1) p = p.next;
         if (p == null) return head;
-
         ListNode tail = head;
         ListNode prev = head, cur = prev.next;
         u = k;
@@ -159,6 +260,70 @@ class Solution {
         return prev;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    ListNode* reverseKGroup(ListNode* head, int k) {
+        int u = k;
+        ListNode* p = head;
+        while (p != NULL && u-- > 1) p = p->next;
+        if (p == NULL) return head;
+        ListNode* tail = head;
+        ListNode* prev = head, *cur = prev->next;
+        u = k;
+        while (u-- > 1) {
+            ListNode* tmp = cur->next;
+            cur->next = prev;
+            prev = cur;
+            cur = tmp;
+        }
+        tail->next = reverseKGroup(cur, k);
+        return prev;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def reverseKGroup(self, head: Optional[ListNode], k: int) -> Optional[ListNode]:
+        u = k
+        p = head
+        while p and u > 1:
+            p = p.next
+            u -= 1
+        if not p: return head
+
+        tail = prev = head
+        cur = prev.next
+        u = k
+        while u > 1:
+            tmp = cur.next
+            cur.next = prev
+            prev, cur = cur, tmp
+            u -= 1
+        tail.next = self.reverseKGroup(cur, k)
+        return prev
+```
+TypeScript 代码：
+```TypeScript
+function reverseKGroup(head: ListNode | null, k: number): ListNode | null {
+    let u = k;
+    let p = head;
+    while (p != null && u-- > 1) p = p.next;
+    if (p == null) return head;
+    let tail = head, prev = head, cur = prev.next;
+    u = k;
+    while (u-- > 1) {
+        let tmp = cur.next;
+        cur.next = prev;
+        prev = cur;
+        cur = tmp;
+    }
+    tail.next = reverseKGroup(cur, k);
+    return prev;
+};
 ```
 * 时间复杂度：会将每个节点处理一遍。复杂度为 $O(n)$
 * 空间复杂度：只有忽略递归带来的空间开销才是 $O(1)$
