--- a/LeetCode/241-250/241. 为运算表达式设计优先级（中等）.md
+++ b/LeetCode/241-250/241. 为运算表达式设计优先级（中等）.md
@@ -55,7 +55,7 @@ Tag : 「DFS」、「爆搜」
 
 不难发现，上述过程都是由「小表达式」的结果推导出「大表达式」的结果，因此也可以运用「区间 DP」方式进行求解，复杂度与 `DFS` 一致。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     char[] cs;
@@ -86,6 +86,93 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    string cs;
+    vector<int> diffWaysToCompute(string s) {
+        cs = s;
+        return dfs(0, cs.size() - 1);
+    }
+    vector<int> dfs(int l, int r) {
+        vector<int> ans;
+        for (int i = l; i <= r; i++) {
+            if (cs[i] >= '0' && cs[i] <= '9') continue;
+            auto l1 = dfs(l, i - 1), l2 = dfs(i + 1, r);
+            for (int a : l1) {
+                for (int b : l2) {
+                    int cur = 0;
+                    if (cs[i] == '+') cur = a + b;
+                    else if (cs[i] == '-') cur = a - b;
+                    else cur = a * b;
+                    ans.push_back(cur);
+                }
+            }
+        }
+        if (ans.empty()) {
+            int cur = 0;
+            for (int i = l; i <= r; i++) cur = cur * 10 + (cs[i] - '0');
+            ans.push_back(cur);
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def diffWaysToCompute(self, cs: str) -> List[int]:        
+        def dfs(l: int, r: int) -> List[int]:
+            ans = []
+            for i in range(l, r + 1):
+                if '0' <= cs[i] <= '9': continue
+                l1, l2 = dfs(l, i - 1), dfs(i + 1, r)
+                for a, b in product(l1, l2):
+                    cur = 0
+                    if cs[i] == '+':
+                        cur = a + b
+                    elif cs[i] == '-':
+                        cur = a - b
+                    else:
+                        cur = a * b
+                    ans.append(cur)
+            if not ans:
+                cur = 0
+                for i in range(l, r + 1):
+                    cur = cur * 10 + (ord(cs[i]) - ord('0'))
+                ans.append(cur)
+            return ans
+        return dfs(0, len(cs) - 1)
+```
+TypeScript 代码：
+```TypeScript
+function diffWaysToCompute(cs: string): number[] {
+    const dfs = function(l: number, r: number): number[] {
+        const ans = [];
+        for (let i = l; i <= r; i++) {
+            if ("0" <= cs[i] && cs[i] <= "9") continue;
+            const l1 = dfs(l, i - 1), l2 = dfs(i + 1, r);
+            for (const a of l1) {
+                for (const b of l2) {
+                    let cur = 0;
+                    if (cs[i] === "+") cur = a + b;
+                    else if (cs[i] === "-") cur = a - b;
+                    else cur = a * b;
+                    ans.push(cur);
+                }
+            }
+        }
+        if (ans.length == 0) {
+            let cur = 0;
+            for (let i = l; i <= r; i++) cur = cur * 10 + (parseInt(cs[i]) - 0);
+            ans.push(cur);
+        }
+        return ans;
+    }
+    return dfs(0, cs.length - 1);
+};
 ```
 * 时间复杂度：复杂度与最终结果数相关，最终结果数为「卡特兰数」，复杂度为 $O(C_{n})$
 * 空间复杂度：复杂度与最终结果数相关，最终结果数为「卡特兰数」，复杂度为 $O(C_{n})$
