--- a/LeetCode/2471-2480/2477. 到达首都的最少油耗（中等）.md
+++ b/LeetCode/2471-2480/2477. 到达首都的最少油耗（中等）.md
@@ -89,7 +89,10 @@ Tag : 「DFS」
 
 ![image.png](https://pic.leetcode.cn/1701743638-UXsdes-image.png)
 
+知道经过某条边的节点数量 `cnt` 后，$\left \lceil \frac{cnt}{seats} \right \rceil$ 即是该边对答案的贡献。
+
 Java 代码：
+
 ```Java
 class Solution {
     int N = 100010, M = 2 * N, idx = 0;
