--- a/LeetCode/41-50/42. 接雨水（困难）.md
+++ b/LeetCode/41-50/42. 接雨水（困难）.md
@@ -6,7 +6,6 @@ Tag : 「模拟」、「单调栈」、「数学」
 
 
 
-
 给定 `n` 个非负整数表示每个宽度为 `1` 的柱子的高度图，计算按此排列的柱子，下雨之后能接多少雨水。
 
 示例 1：
@@ -29,20 +28,22 @@ Tag : 「模拟」、「单调栈」、「数学」
 
 提示：
 * $n = height.length$
-* $0 <= n <= 3 * 10^4$
+* $0 <= n <= 2 \times 10^4$
 * $0 <= height[i] <= 10^5$
 
 ---
 
-### 朴素解法
+### 模拟
 
-对于每根柱子而言，我们只需要找出「其左边最高的柱子」和「其右边最高的柱子」。
+对每根柱子而言，我们先找出其「左边最高的柱子」和「右边最高的柱子」。
 
-对左右的最高柱子取一个最小值，再和当前柱子的高度做一个比较，即可得出当前位置可以接下的雨水。
+对左右最高柱子取较小值，再和当前柱子高度做比较，即可得出当前位置可以接下的雨水。
 
 同时，边缘的柱子不可能接到雨水（某一侧没有柱子）。
 
-代码：
+最后注意：该解法计算量会去到 $n^2 = 4 \times 10^8$，一旦计算量上界接近 $10^7$，我们就需要考虑 `TLE`（超时）问题，在 LeetCode 上该解法 `C++` 无法通过，其他语言目前还能通过。
+
+Java 代码：
 ```Java
 class Solution {
     public int trap(int[] height) {
@@ -67,6 +68,76 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int trap(vector<int>& height) {
+        int n = height.size();
+        int ans = 0;
+        for (int i = 1; i < n - 1; i++) {
+            int cur = height[i];
+
+            // 获取当前位置的左边最大值
+            int l = INT_MIN;
+            for (int j = i - 1; j >= 0; j--) l = max(l, height[j]);
+            if (l <= cur) continue;
+
+            // 获取当前位置的右边边最大值
+            int r = INT_MIN;
+            for (int j = i + 1; j < n; j++) r = max(r, height[j]);
+            if (r <= cur) continue;
+
+            // 计算当前位置可接的雨水
+            ans += min(l, r) - cur;
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def trap(self, height: List[int]) -> int:
+        n = len(height)
+        ans = 0
+        for i in range(1, n - 1):
+            cur = height[i]
+
+            # 获取当前位置的左边最大值
+            l = max(height[:i])
+            if l <= cur:  continue
+
+            # 获取当前位置的右边最大值
+            r = max(height[i + 1:])
+            if r <= cur: continue
+
+            # 计算当前位置可接的雨水
+            ans += min(l, r) - cur
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function trap(height: number[]): number {
+    const n = height.length;
+    let ans = 0;
+    for (let i = 1; i < n - 1; i++) {
+        const cur = height[i];
+
+        // 获取当前位置的左边最大值
+        const l = Math.max(...height.slice(0, i));
+        if (l <= cur) continue;
+
+        // 获取当前位置的右边最大值
+        const r = Math.max(...height.slice(i + 1));
+        if (r <= cur) continue;
+            
+        // 计算当前位置可接的雨水
+        ans += Math.min(l, r) - cur;
+    }
+    return ans;
+};
 ```
 * 时间复杂度：需要处理所有非边缘的柱子，复杂度为 $O(n)$；对于每根柱子而言，需要往两边扫描分别找到最大值，复杂度为 $O(n)$。整体复杂度为 $O(n^2)$
 * 空间复杂度：$O(1)$
@@ -95,7 +166,7 @@ class Solution {
 
 整体算法的复杂度也从 $O(n^2)$ 下降到 $O(n)$。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int trap(int[] height) {
@@ -115,19 +186,88 @@ class Solution {
         for (int i = n - 2; i >= 0; i--) rm[i] = Math.max(height[i], rm[i + 1]);
 
         for (int i = 1; i < n - 1; i++) {
-            int cur = height[i];
-
-            int l = lm[i];
-            if (l <= cur) continue;
-
-            int r = rm[i];
-            if (r <= cur) continue;
-
+            int cur = height[i], l = lm[i], r = rm[i];
+            if (l <= cur || r <= cur) continue;
             ans += Math.min(l, r) - cur;
         }
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int trap(vector<int>& height) {
+        int n = height.size(), ans = 0;
+        // 由于预处理最值的时候，我们会直接访问到 height[0] 或者 height[n - 1]，因此要特判一下
+        if (n == 0) return ans;
+
+        vector<int> lm(n, 0), rm(n, 0);
+        // 预处理每个位置左边的最值
+        lm[0] = height[0];
+        for (int i = 1; i < n; i++) lm[i] = max(height[i], lm[i - 1]);
+        // 预处理每个位置右边的最值
+        rm[n - 1] = height[n - 1];
+        for (int i = n - 2; i >= 0; i--) rm[i] = max(height[i], rm[i + 1]);
+
+        for (int i = 1; i < n - 1; i++) {
+            int cur = height[i], l = lm[i], r = rm[i];
+            if (l <= cur || r <= cur) continue;
+            ans += min(l, r) - cur;
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def trap(self, height: List[int]) -> int:
+        n, ans = len(height), 0
+        # 由于预处理最值的时候，我们会直接访问到 height[0] 或者 height[n - 1]，因此要特判一下
+        if n == 0: return ans
+
+        lm, rm = [0] * n, [0] * n
+        # 预处理每个位置左边的最值
+        lm[0] = height[0]
+        for i in range(1, n):
+            lm[i] = max(height[i], lm[i - 1])
+
+        # 预处理每个位置右边的最值
+        rm[n - 1] = height[n - 1]
+        for i in range(n - 2, -1, -1):
+            rm[i] = max(height[i], rm[i + 1])
+
+        for i in range(1, n - 1):
+            cur, l, r = height[i], lm[i], rm[i]
+            if l <= cur or r <= cur: continue
+            ans += min(l, r) - cur
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function trap(height: number[]): number {
+    let n = height.length, ans = 0;
+    // 由于预处理最值的时候，我们会直接访问到 height[0] 或者 height[n - 1]，因此要特判一下
+    if (n == 0) return ans;
+    
+    const lm = new Array(n).fill(0), rm = new Array(n).fill(0);
+    // 预处理每个位置左边的最值
+    lm[0] = height[0];
+    for (let i = 1; i < n; i++) lm[i] = Math.max(height[i], lm[i - 1]);
+
+    // 预处理每个位置右边的最值
+    rm[n - 1] = height[n - 1];
+    for (let i = n - 2; i >= 0; i--) rm[i] = Math.max(height[i], rm[i + 1]);
+
+    for (let i = 1; i < n - 1; i++) {
+        const cur = height[i], l = lm[i], r = rm[i];
+        if (l <= cur || r <= cur) continue;
+        ans += Math.min(l, r) - cur;
+    }
+    return ans;
+};
 ```
 * 时间复杂度：预处理出两个最大值数组，复杂度为 $O(n)$；计算每根柱子可接的雨水量，复杂度为 $O(n)$。整体复杂度为 $O(n)$
 * 空间复杂度：使用了数组存储两侧最大值。复杂度为 $O(n)$
@@ -155,24 +295,20 @@ class Solution {
 
 当有了 `a` 左右两侧比 `a` 高的柱子后，便可计算 `a` 位置可接下的雨水量。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int trap(int[] height) {
-        int n = height.length;
-        int ans = 0;
+        int n = height.length, ans = 0;
         Deque<Integer> d = new ArrayDeque<>();
         for (int i = 0; i < n; i++) {
             while (!d.isEmpty() && height[i] > height[d.peekLast()]) {
                 int cur = d.pollLast();
-
                 // 如果栈内没有元素，说明当前位置左边没有比其高的柱子，跳过
                 if (d.isEmpty()) continue;
-
-                // 左右位置，并有左右位置得出「宽度」和「高度」
+                // 左右位置，并由左右位置得出「宽度」和「高度」
                 int l = d.peekLast(), r = i;
-                int w = r - l + 1 - 2;
-                int h = Math.min(height[l], height[r]) - height[cur];
+                int w = r - l + 1 - 2, h = Math.min(height[l], height[r]) - height[cur];
                 ans += w * h;
             }
             d.addLast(i);
@@ -180,6 +316,68 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int trap(vector<int>& height) {
+        int n = height.size(), ans = 0;
+        deque<int> d;
+        for (int i = 0; i < n; i++) {
+            while (!d.empty() && height[i] > height[d.back()]) {
+                int cur = d.back();
+                d.pop_back();
+                // 如果栈内没有元素，说明当前位置左边没有比其高的柱子，跳过
+                if (d.empty()) continue;
+                // 左右位置，并由左右位置得出「宽度」和「高度」
+                int l = d.back(), r = i;
+                int w = r - l + 1 - 2, h = min(height[l], height[r]) - height[cur];
+                ans += w * h;
+            }
+            d.push_back(i);
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def trap(self, height: List[int]) -> int:
+        n, ans = len(height), 0
+        d = deque()
+        for i in range(n):
+            while d and height[i] > height[d[-1]]:
+                cur = d.pop()
+                # 如果栈内没有元素，说明当前位置左边没有比其高的柱子，跳过
+                if not d: continue
+                # 左右位置，并由左右位置得出「宽度」和「高度」
+                l, r = d[-1], i
+                w, h = r - l + 1 - 2, min(height[l], height[r]) - height[cur]
+                ans += w * h
+            d.append(i)
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function trap(height: number[]): number {
+    let n = height.length, ans = 0;
+    const d = [];
+    for (let i = 0; i < n; i++) {
+        while (d.length && height[i] > height[d[d.length - 1]]) {
+            const cur = d.pop() as number;
+            // 如果栈内没有元素，说明当前位置左边没有比其高的柱子，跳过
+            if (!d.length) continue;
+            // 左右位置，并由左右位置得出「宽度」和「高度」
+            const l = d[d.length - 1], r = i;
+            const w = r - l + 1 - 2, h = Math.min(height[l], height[r]) - height[cur];
+            ans += w * h;
+        }
+        d.push(i);
+    }
+    return ans;
+};
 ```
 * 时间复杂度：每个元素最多进栈和出栈一次。复杂度为 $O(n)$
 * 空间复杂度：栈最多存储 $n$ 个元素。复杂度为 $O(n)$
@@ -200,7 +398,7 @@ class Solution {
 
 ![image.png](https://pic.leetcode-cn.com/1617328567-AkILvh-image.png)
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int trap(int[] height) {
@@ -229,6 +427,89 @@ class Solution {
         return lSum + rSum - full - sum;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int trap(vector<int>& height) {
+        int n = height.size();
+
+        int sum = 0, maxv = 0;
+        for (int i = 0; i < n; i++) {
+            int cur = height[i] * 1L;
+            sum += cur;
+            maxv = max(maxv, cur);
+        }
+        int full = maxv * n;
+
+        int lSum = 0, lMax = 0;
+        for (int i = 0; i < n; i++) {
+            lMax = max(lMax, height[i]);
+            lSum += lMax;
+        }
+
+        int rSum = 0, rMax = 0;
+        for (int i = n - 1; i >= 0; i--) {
+            rMax = max(rMax, height[i]);
+            rSum += rMax;
+        }
+
+        return lSum - full - sum + rSum; // 考虑到 C++ 溢出报错, 先减后加
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def trap(self, height: List[int]) -> int:
+        n = len(height)
+
+        sum_val, max_val = 0, 0
+        for cur in height:
+            sum_val += cur
+            max_val = max(max_val, cur)
+        full = max_val * n
+
+        l_sum, l_max = 0, 0
+        for h in height:
+            l_max = max(l_max, h)
+            l_sum += l_max
+
+        r_sum, r_max = 0, 0
+        for i in range(n - 1, -1, -1):
+            r_max = max(r_max, height[i])
+            r_sum += r_max
+
+        return l_sum + r_sum - full - sum_val
+```
+TypeScript 代码：
+```TypeScript
+function trap(height: number[]): number {
+    const n = height.length;
+
+    let sum = 0, max = 0;
+    for (let i = 0; i < n; i++) {
+        const cur = height[i];
+        sum += cur;
+        max = Math.max(max, cur);
+    }
+    const full = max * n;
+
+    let lSum = 0, lMax = 0;
+    for (let i = 0; i < n; i++) {
+        lMax = Math.max(lMax, height[i]);
+        lSum += lMax;
+    }
+
+    let rSum = 0, rMax = 0;
+    for (let i = n - 1; i >= 0; i--) {
+        rMax = Math.max(rMax, height[i]);
+        rSum += rMax;
+    }
+
+    return lSum + rSum - full - sum;
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
