--- a/LeetCode/41-50/43. 字符串相乘（中等）.md
+++ b/LeetCode/41-50/43. 字符串相乘（中等）.md
@@ -6,9 +6,7 @@ Tag : 「数学」、「模拟」
 
 
 
-给定两个以字符串形式表示的非负整数 num1 和 num2，返回 num1 和 num2 的乘积，它们的乘积也表示为字符串形式。
-
-
+给定两个以字符串形式表示的非负整数 `num1` 和 `num2`，返回 `num1` 和 `num2` 的乘积，它们的乘积也表示为字符串形式。
 
 示例 1:
 ```
@@ -23,9 +21,9 @@ Tag : 「数学」、「模拟」
 输出: "56088"
 ```
 说明：
-* num1 和 num2 的长度小于110。
-* num1 和 num2 只包含数字 0-9。
-* num1 和 num2 均不以零开头，除非是数字 0 本身。
+* `num1` 和 `num2` 的长度小于 $110$。
+* `num1` 和 `num2` 只包含数字 `0-9`。
+* `num1` 和 `num2` 均不以零开头，除非是数字 `0` 本身。
 * **不能使用任何标准库的大数类型（比如 BigInteger）或直接将输入转换为整数来处理。**
 
 ---
@@ -42,7 +40,7 @@ Tag : 「数学」、「模拟」
 
 另外，最后拼接结果时需要注意忽略前导零。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public String multiply(String n1, String n2) {
@@ -50,8 +48,7 @@ class Solution {
         int[] res = new int[n + m];
         for (int i = n - 1; i >= 0; i--) {
             for (int j = m - 1; j >= 0; j--) {
-                int a = n1.charAt(i) - '0';
-                int b = n2.charAt(j) - '0';
+                int a = n1.charAt(i) - '0', b = n2.charAt(j) - '0';
                 int r = a * b;
                 r += res[i + j + 1];
                 res[i + j + 1] = r % 10;
@@ -67,7 +64,70 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：使用 `n` 和 `m` 分别代表两个数的长度。复杂度为 $O(n * m)$
+C++ 代码：
+```C++
+class Solution {
+public:
+    string multiply(string num1, string num2) {
+        int n = num1.length(), m = num2.length();
+        vector<int> res(n + m, 0);
+        for (int i = n - 1; i >= 0; i--) {
+            for (int j = m - 1; j >= 0; j--) {
+                int a = num1[i] - '0', b = num2[j] - '0';
+                int r = a * b;
+                r += res[i + j + 1];
+                res[i + j + 1] = r % 10;
+                res[i + j] += r / 10;
+            }
+        }
+        string result;
+        for (int i = 0; i < n + m; i++) {
+            if (result.empty() && res[i] == 0) continue;
+            result.push_back(res[i] + '0');
+        }
+        return result.empty() ? "0" : result;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def multiply(self, num1: str, num2: str) -> str:
+        n, m = len(num1), len(num2)
+        res = [0] * (n + m)
+        for i in range(n - 1, -1, -1):
+            for j in range(m - 1, -1, -1):
+                a, b = int(num1[i]), int(num2[j])
+                r = a * b
+                r += res[i + j + 1]
+                res[i + j + 1] = r % 10
+                res[i + j] += r // 10
+        result = ''.join(str(x) for x in res).lstrip('0')
+        return result if result else '0'
+```
+TypeScript 代码：
+```TypeScript
+function multiply(num1: string, num2: string): string {
+    const n = num1.length, m = num2.length;
+    const res = new Array(n + m).fill(0);
+    for (let i = n - 1; i >= 0; i--) {
+        for (let j = m - 1; j >= 0; j--) {
+            const a = parseInt(num1[i]), b = parseInt(num2[j]);
+            let r = a * b;
+            r += res[i + j + 1];
+            res[i + j + 1] = r % 10;
+            res[i + j] += Math.floor(r / 10);
+        }
+    }
+    let result = "";
+    for (let i = 0; i < n + m; i++) {
+        if (result.length == 0 && res[i] == 0) continue;
+        result += res[i].toString();
+    }
+    return result.length == 0 ? "0" : result;  
+};
+```
+* 时间复杂度：使用 `n` 和 `m` 分别代表两个数的长度。复杂度为 $O(n \times m)$
 * 空间复杂度：使用了长度为 `m + n` 的数组存储结果。复杂度为 $O(n + m)$
 
 ---
