--- a/LeetCode/41-50/44. 通配符匹配（困难）.md
+++ b/LeetCode/41-50/44. 通配符匹配（困难）.md
@@ -7,23 +7,26 @@ Tag : 「线性 DP」
 
 
 
-给定一个字符串 (s) 和一个字符模式 (p) ，实现一个支持 '?' 和 '*' 的通配符匹配。
+给定一个字符串 (`s`) 和一个字符模式 (`p`) ，实现一个支持 `'?'` 和 `'*'` 的通配符匹配。
 
-* '?' 可以匹配任何单个字符。
-* '*' 可以匹配任意字符串（包括空字符串）。
+* `'?'` 可以匹配任何单个字符。
+* `'*'` 可以匹配任意字符串（包括空字符串）。
+
 两个字符串完全匹配才算匹配成功。
 
 说明:
 
-* s 可能为空，且只包含从 a-z 的小写字母。
-* p 可能为空，且只包含从 a-z 的小写字母，以及字符 ? 和 *。
+* `s` 可能为空，且只包含从 `a-z` 的小写字母。
+* `p` 可能为空，且只包含从 `a-z` 的小写字母，以及字符 `?` 和 `*`。
 
 示例 1:
 ```
 输入:
 s = "aa"
 p = "a"
+
 输出: false
+
 解释: "a" 无法匹配 "aa" 整个字符串。
 ```
 示例 2:
@@ -31,7 +34,9 @@ p = "a"
 输入:
 s = "aa"
 p = "*"
+
 输出: true
+
 解释: '*' 可以匹配任意字符串。
 ```
 示例 3:
@@ -39,7 +44,9 @@ p = "*"
 输入:
 s = "cb"
 p = "?a"
+
 输出: false
+
 解释: '?' 可以匹配 'c', 但第二个 'a' 无法匹配 'b'。
 ```
 示例 4:
@@ -47,7 +54,9 @@ p = "?a"
 输入:
 s = "adceb"
 p = "*a*b"
+
 输出: true
+
 解释: 
 第一个 '*' 可以匹配空字符串, 
 第二个 '*' 可以匹配字符串 "dce".
@@ -57,6 +66,7 @@ p = "*a*b"
 输入:
 s = "acdcb"
 p = "a*c?b"
+
 输出: false
 ```
 
@@ -122,19 +132,38 @@ $$f[i][j] = f[i][j - 1] || f[i - 1][j] (i >= 1)$$
 1. 通过上述的推导过程，你会发现设计不少的「回退检查」操作（即遍历到 `i` 位，要回头检查 `i - 1` 等），因此我们可以将「哨兵技巧」应用到本题，往两个字符串的头部插入哨兵
 2. 对于 `p[j] = '.'` 和 `p[j] = 普通字符` 的情况，想要为 `true`，其实有共同的条件 `f[i - 1][j - 1] == true`，因此可以合到一起来做
 
-代码：
-
-```java
+Java 代码：
+```Java
 class Solution {
-    public boolean isMatch(String ss, String pp) {
-        int n = ss.length(), m = pp.length();
+    public boolean isMatch(String s, String p) {
+        int n = s.length(), m = p.length();
         // 技巧：往原字符头部插入空格，这样得到 char 数组是从 1 开始，而且可以使得 f[0][0] = true，可以将 true 这个结果滚动下去
-        ss = " " + ss;
-        pp = " " + pp;
-        char[] s = ss.toCharArray();
-        char[] p = pp.toCharArray();
+        s = " " + s; p = " " + p;
+        char[] ss = s.toCharArray(), pp = p.toCharArray();
         // f(i,j) 代表考虑 s 中的 1~i 字符和 p 中的 1~j 字符 是否匹配
         boolean[][] f = new boolean[n + 1][m + 1];
+        f[0][0] = true;
+        for (int i = 0; i <= n; i++) {
+            for (int j = 1; j <= m; j++) {
+                if (pp[j] == '*') {
+                    f[i][j] = f[i][j - 1] || (i - 1 >= 0 && f[i - 1][j]);
+                } else {
+                    f[i][j] = i - 1 >= 0 && f[i - 1][j - 1] && (ss[i] == pp[j] || pp[j] == '?');
+                }
+            }
+        }
+        return f[n][m];
+    }
+}
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    bool isMatch(string s, string p) {
+        int n = s.length(), m = p.length();
+        s = " " + s; p = " " + p;
+        vector<vector<bool>> f(n + 1, vector<bool>(m + 1, false));
         f[0][0] = true;
         for (int i = 0; i <= n; i++) {
             for (int j = 1; j <= m; j++) {
@@ -147,10 +176,47 @@ class Solution {
         }
         return f[n][m];
     }
-}
+};
 ```
-* 时间复杂度：`n` 表示 `s` 的长度，`m` 表示 `p` 的长度，总共 `n * m` 个状态。复杂度为 $O(n * m)$
-* 空间复杂度：使用了二维数组记录结果。复杂度为 $O(n * m)$
+Python 代码：
+```Python
+class Solution:
+    def isMatch(self, s: str, p: str) -> bool:
+        n, m = len(s), len(p)
+        s = " " + s
+        p = " " + p
+        f = [[False] * (m + 1) for _ in range(n + 1)]
+        f[0][0] = True
+        for i in range(n + 1):
+            for j in range(1, m + 1):
+                if p[j] == '*':
+                    f[i][j] = f[i][j - 1] or (i - 1 >= 0 and f[i - 1][j])
+                else:
+                    f[i][j] = i - 1 >= 0 and f[i - 1][j - 1] and (s[i] == p[j] or p[j] == '?')
+        return f[n][m]
+```
+TypeScript 代码：
+```TypeScript
+function isMatch(s: string, p: string): boolean {
+    const n = s.length, m = p.length;
+    s = " " + s;
+    p = " " + p;
+    const f = new Array(n + 1).fill(false).map(() => new Array(m + 1).fill(false));
+    f[0][0] = true;
+    for (let i = 0; i <= n; i++) {
+        for (let j = 1; j <= m; j++) {
+            if (p[j] === '*') {
+                f[i][j] = f[i][j - 1] || (i - 1 >= 0 && f[i - 1][j]);
+            } else {
+                f[i][j] = i - 1 >= 0 && f[i - 1][j - 1] && (s[i] === p[j] || p[j] === '?');
+            }
+        }
+    }
+    return f[n][m];
+};
+```
+* 时间复杂度：`n` 表示 `s` 的长度，`m` 表示 `p` 的长度，总共 $n \times m$ 个状态。复杂度为 $O(n \times m)$
+* 空间复杂度：使用了二维数组记录结果。复杂度为 $O(n \times m)$
 
 **再次强调，动态规划本质上是枚举（不重复的暴力枚举），因此其复杂度很好分析，有多少个状态就要被计算多少次，复杂度就为多少。**
 
