--- a/LeetCode/431-440/440. 字典序的第K小数字（困难）.md
+++ b/LeetCode/431-440/440. 字典序的第K小数字（困难）.md
@@ -58,7 +58,7 @@ Tag : 「数学」、「模拟」、「找规律」、「计数」
     * $u == x$：此时所有位数为 $m$ 的数中部分满足 $limit$ 限制，合法个数为 $limit - x * 10^k + 1$ 个（只有 $[x0...0, limit]$ 为合法数）；
     * $u > x$：此时所有位数为 $m$ 的数均小于 $limit$，合法个数为 $10^k$。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int findKthNumber(int n, int k) {
@@ -83,6 +83,85 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int findKthNumber(int n, int k) {
+        int ans = 1;
+        while (k > 1) {
+            int cnt = getCnt(ans, n);
+            if (cnt < k) {
+                k -= cnt; ans++;
+            } else {
+                k--; ans *= 10;
+            }
+        }
+        return ans;
+    }
+    int getCnt(int x, int limit) {
+        string a = to_string(x), b = to_string(limit);
+        int n = a.length(), m = b.length(), k = m - n;
+        int ans = 0, u = stoi(b.substr(0, n));
+        for (int i = 0; i < k; i++) ans += pow(10, i);
+        if (u > x) ans += pow(10, k);
+        else if (u == x) ans += limit - x * pow(10, k) + 1;
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def findKthNumber(self, n: int, k: int) -> int:
+        def get_cnt(x, limit):
+            a, b = str(x), str(limit)
+            n, m = len(a), len(b)
+            k = m - n
+            ans = 0
+            u = int(b[:n])
+            for i in range(k):
+                ans += int(pow(10, i))
+            if u > x:
+                ans += int(pow(10, k))
+            elif u == x:
+                ans += limit - x * int(pow(10, k)) + 1
+            return ans
+
+        ans = 1
+        while k > 1:
+            cnt = get_cnt(ans, n)
+            if cnt < k:
+                k, ans = k - cnt, ans + 1
+            else:
+                k, ans = k - 1, ans * 10
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function findKthNumber(n: number, k: number): number {
+    const getCnt = function(x: number, limit: number): number {
+        const a = String(x), b = String(limit);
+        const n = a.length, m = b.length, k = m - n;
+        let ans = 0;
+        let u = parseInt(b.substring(0, n));
+        for (let i = 0; i < k; i++) ans += Math.pow(10, i);
+        if (u > x) ans += Math.pow(10, k);
+        else if (u == x) ans += limit - x * Math.pow(10, k) + 1;
+        return ans;
+    };
+    let ans = 1;
+    while (k > 1) {
+        let cnt = getCnt(ans, n);
+        if (cnt < k) {
+            k -= cnt; ans++;
+        } else {
+            k--; ans *= 10;
+        }
+    }
+    return ans;
+};
 ```
 * 时间复杂度：枚举前缀以及 `getCnt` 操作均与位数相关，复杂度均为 $O(\log{n})$。整体复杂度为 $O(\log{^2}{n})$
 * 空间复杂度：忽略子串生成复杂度为 $O(1)$，否则为 $O(\log{^2}{n})$
