--- a/LeetCode/551-560/556. 下一个更大元素 III（中等）.md
+++ b/LeetCode/551-560/556. 下一个更大元素 III（中等）.md
@@ -6,7 +6,9 @@ Tag : 「模拟」、「双指针」
 
 
 
-给你一个正整数 $n$，请你找出符合条件的最小整数，其由重新排列 $n$ 中存在的每位数字组成，并且其值大于 $n$。如果不存在这样的正整数，则返回 $-1$ 。
+给你一个正整数 $n$，请你找出符合条件的最小整数，其由重新排列 $n$ 中存在的每位数字组成，并且其值大于 $n$。
+
+如果不存在这样的正整数，则返回 $-1$ 。
 
 注意 ，返回的整数应当是一个 $32$ 位整数 ，如果存在满足题意的答案，但不是 $32$ 位整数 ，同样返回 $-1$。
 
@@ -38,7 +40,7 @@ Tag : 「模拟」、「双指针」
 
 当互换完成后，此时比 $x$ 要大这一目标已由第 `idx` 位所保证（后续的排序应该按照从小到大放置），同时互换结束后的 $[0, idx)$ 仍然满足「非严格升序」特性，因此我们可以对其运用「双指针」进行翻转。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int nextGreaterElement(int x) {
@@ -69,6 +71,86 @@ class Solution {
         nums.set(b, c);
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int nextGreaterElement(int x) {
+        vector<int> nums;
+        while (x != 0) {
+            nums.push_back(x % 10);
+            x /= 10;
+        }
+        int n = nums.size(), idx = -1;
+        for (int i = 0; i < n - 1 && idx == -1; i++) {
+            if (nums[i + 1] < nums[i]) idx = i + 1;
+        }
+        if (idx == -1) return -1;
+        for (int i = 0; i < idx; i++) {
+            if (nums[i] > nums[idx]) {
+                swap(nums[i], nums[idx]);
+                break;
+            }
+        }
+        reverse(nums.begin(), nums.begin() + idx);
+        long long ans = 0;
+        for (int i = n - 1; i >= 0; i--) ans = ans * 10 + nums[i];
+        return ans > INT_MAX ? -1 : static_cast<int>(ans);
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def nextGreaterElement(self, x: int) -> int:
+        nums = []
+        while x != 0:
+            nums.append(x % 10)
+            x //= 10
+        n, idx = len(nums), -1
+        for i in range(n - 1):
+            if nums[i + 1] < nums[i]:
+                idx = i + 1
+                break
+        if idx == -1: return -1
+        for i in range(idx):
+            if nums[i] > nums[idx]:
+                nums[i], nums[idx] = nums[idx], nums[i]
+                break
+        l, r = 0, idx - 1
+        while l < r:
+            nums[l], nums[r] = nums[r], nums[l]
+            l, r = l + 1, r - 1
+        ans = 0
+        for num in nums[::-1]: ans = ans * 10 + num
+        return -1 if ans > 2**31 - 1 else ans
+```
+TypeScript 代码：
+```TypeScript
+function nextGreaterElement(x: number): number {
+    const nums = [];
+    while (x !== 0) {
+        nums.push(x % 10);
+        x = Math.floor(x / 10);
+    }
+    const n = nums.length;
+    let idx = -1;
+    for (let i = 0; i < n - 1 && idx == -1; i++) {
+        if (nums[i + 1] < nums[i]) idx = i + 1;
+    }
+    if (idx == -1) return -1;
+    for (let i = 0; i < idx; i++) {
+        if (nums[i] > nums[idx]) {
+            [nums[i], nums[idx]] = [nums[idx], nums[i]];
+            break;
+        }
+    }
+    for (let l = 0, r = idx - 1; l < r; l++, r--) [nums[l], nums[r]] = [nums[r], nums[l]];
+    let ans = 0;
+    for (let i = n - 1; i >= 0; i--) ans = ans * 10 + nums[i];
+    return ans > 2**31 - 1 ? -1 : ans;
+};
 ```
 * 时间复杂度：$O(\log{n})$
 * 空间复杂度：$O(\log{n})$
