--- a/LeetCode/661-670/670. 最大交换（中等）.md
+++ b/LeetCode/661-670/670. 最大交换（中等）.md
@@ -6,7 +6,9 @@ Tag : 「模拟」
 
 
 
-给定一个非负整数，你至多可以交换一次数字中的任意两位。返回你能得到的最大值。
+给定一个非负整数，你至多可以交换一次数字中的任意两位。
+
+返回你能得到的最大值。
 
 示例 1 :
 ```
@@ -65,6 +67,58 @@ class Solution {
         return ans; 
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int maximumSwap(int num) {
+        vector<int> list;
+        while (num != 0) {
+            list.push_back(num % 10); num /= 10;
+        }
+        int n = list.size(), ans = 0;
+        int* idx = new int[n];
+        for (int i = 0, j = 0; i < n; i++) {
+            if (list[i] > list[j]) j = i;
+            idx[i] = j;
+        }
+        for (int i = n - 1; i >= 0; i--) {
+            if (list[idx[i]] != list[i]) {
+                int c = list[idx[i]];
+                list[idx[i]] = list[i];
+                list[i] = c;
+                break;
+            }
+        }
+        for (int i = n - 1; i >= 0; i--) ans = ans * 10 + list[i];
+        return ans; 
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def maximumSwap(self, num: int) -> int:
+        nums = []
+        while num != 0:
+            nums.append(num % 10); num //= 10
+        n, ans = len(nums), 0
+        idx = [0] * n
+        i, j = 0, 0
+        while i < n:
+            if nums[i] > nums[j]: j = i
+            idx[i] = j
+            i += 1
+        for i in range(n - 1, -1, -1):
+            if nums[idx[i]] != nums[i]:
+                c = nums[idx[i]]
+                nums[idx[i]] = nums[i]
+                nums[i] = c
+                break
+        for i in range(n - 1, -1, -1):
+            ans = ans * 10 + nums[i]
+        return ans
 ```
 TypeScript 代码：
 ```TypeScript
