--- a/LeetCode/731-740/735. 行星碰撞（中等）.md
+++ b/LeetCode/731-740/735. 行星碰撞（中等）.md
@@ -8,9 +8,15 @@ Tag : 「栈」、「模拟」
 
 给定一个整数数组 `asteroids`，表示在同一行的行星。
 
-对于数组中的每一个元素，其绝对值表示行星的大小，正负表示行星的移动方向（正表示向右移动，负表示向左移动）。每一颗行星以相同的速度移动。
+对于数组中的每一个元素，其绝对值表示行星的大小，正负表示行星的移动方向（正表示向右移动，负表示向左移动）。
 
-找出碰撞后剩下的所有行星。碰撞规则：两个行星相互碰撞，较小的行星会爆炸。如果两颗行星大小相同，则两颗行星都会爆炸。两颗移动方向相同的行星，永远不会发生碰撞。
+每一颗行星以相同的速度移动，找出碰撞后剩下的所有行星。
+
+碰撞规则：
+
+1. 两个行星相互碰撞，较小的行星会爆炸。
+2. 如果两颗行星大小相同，则两颗行星都会爆炸。
+3. 两颗移动方向相同的行星，永远不会发生碰撞。
 
 示例 1：
 ```
@@ -46,8 +52,6 @@ Tag : 「栈」、「模拟」
 
 ### 模拟 + 栈
 
-为了方便，我们令 `asteroids` 为 `ats`。
-
 由于碰撞抵消总是从相邻行星之间发生，我们可以使用「栈」来模拟该过程。
 
 从前往后处理所有的 $ats[i]$，使用栈存储当前未被抵消的行星，当栈顶元素方向往右，当前 $ats[i]$ 方向往左时，会发生抵消操作，抵消过程根据规则进行即可。
@@ -55,9 +59,9 @@ Tag : 「栈」、「模拟」
 Java 代码：
 ```Java
 class Solution {
-    public int[] asteroidCollision(int[] ats) {
+    public int[] asteroidCollision(int[] asteroids) {
         Deque<Integer> d = new ArrayDeque<>();
-        for (int t : ats) {
+        for (int t : asteroids) {
             boolean ok = true;
             while (ok && !d.isEmpty() && d.peekLast() > 0 && t < 0) {
                 int a = d.peekLast(), b = -t;
@@ -73,28 +77,32 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function asteroidCollision(ats: number[]): number[] {
-    const stk: number[] = new Array<number>()
-    for (const t of ats) {
-        let ok: boolean = true
-        while (ok && stk.length > 0 && stk[stk.length - 1] > 0 && t < 0) {
-            const a = stk[stk.length - 1], b = -t
-            if (a <= b) stk.pop()
-            if (a >= b) ok = false
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> asteroidCollision(vector<int>& asteroids) {
+        deque<int> d;
+        for (int t : asteroids) {
+            bool ok = true;
+            while (ok && !d.empty() && d.back() > 0 && t < 0) {
+                int a = d.back(), b = -t;
+                if (a <= b) d.pop_back();
+                if (a >= b) ok = false;
+            }
+            if (ok) d.push_back(t);
         }
-        if (ok) stk.push(t)
+        vector<int> ans(d.begin(), d.end());
+        return ans;
     }
-    return stk
 };
 ```
 Python 3 代码：
 ```Python3
 class Solution:
-    def asteroidCollision(self, ats: List[int]) -> List[int]:
+    def asteroidCollision(self, asteroids: List[int]) -> List[int]:
         stk = []
-        for t in ats:
+        for t in asteroids:
             ok = True
             while ok and stk and stk[-1] > 0 and t < 0:
                 a, b = stk[-1], -t
@@ -105,6 +113,22 @@ class Solution:
             if ok:
                 stk.append(t)
         return stk
+```
+TypeScript 代码：
+```TypeScript
+function asteroidCollision(asteroids: number[]): number[] {
+    const stk = new Array<number>()
+    for (const t of asteroids) {
+        let ok = true
+        while (ok && stk.length > 0 && stk[stk.length - 1] > 0 && t < 0) {
+            const a = stk[stk.length - 1], b = -t
+            if (a <= b) stk.pop()
+            if (a >= b) ok = false
+        }
+        if (ok) stk.push(t)
+    }
+    return stk
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
