--- a/LeetCode/731-740/739. 每日温度（中等）.md
+++ b/LeetCode/731-740/739. 每日温度（中等）.md
@@ -35,11 +35,9 @@ Tag : 「单调栈」
 
 ### 单调栈
 
-为了方便，我们令 `temperatures` 为 `ts`。
-
 抽象题意为 : 求解给定序列中每个位置（右边）最近一个比其大的位置，可使用「单调栈」来进行求解。
 
-具体的，我们可以从前往后处理所有的 $ts[i]$，使用某类容器装载我们所有的「待更新」的位置（下标），假设当前处理到的是 $ts[i]$：
+具体的，我们可以从前往后处理所有的 $temperatures[i]$，使用某类容器装载我们所有的「待更新」的位置（下标），假设当前处理到的是 $temperatures[i]$：
 
 * 若其比容器内的任意位置（下标）对应温度要低，其必然不能更新任何位置（下标），将其也加入容器尾部（此时我们发现，若有一个新的位置（下标）加入容器，其必然是当前所有待更新位置（下标）中的温度最低的，即容器内的温度单调递减）；
 
@@ -50,12 +48,12 @@ Tag : 「单调栈」
 Java 代码：
 ```Java
 class Solution {
-    public int[] dailyTemperatures(int[] ts) {
-        int n = ts.length;
+    public int[] dailyTemperatures(int[] temperatures) {
+        int n = temperatures.length;
         int[] ans = new int[n];
         Deque<Integer> d = new ArrayDeque<>();
         for (int i = 0; i < n; i++) {
-            while (!d.isEmpty() && ts[d.peekLast()] < ts[i]) {
+            while (!d.isEmpty() && temperatures[d.peekLast()] < temperatures[i]) {
                 int idx = d.pollLast();
                 ans[idx] = i - idx;
             }
@@ -65,15 +63,50 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> dailyTemperatures(vector<int>& temperatures) {
+        int n = temperatures.size();
+        vector<int> ans(n);
+        deque<int> d;
+        for (int i = 0; i < n; i++) {
+            while (!d.empty() && temperatures[d.back()] < temperatures[i]) {
+                int idx = d.back();
+                ans[idx] = i - idx;
+                d.pop_back();
+            }
+            d.push_back(i);
+        }
+        return ans;
+    }
+};
+```
+Python3 代码：
+```Python
+class Solution:
+    def dailyTemperatures(self, temperatures: List[int]) -> List[int]:
+        n, he, ta = len(temperatures), 0, 0
+        ans, stk = [0] * n, [-1] * n
+        for i in range(n):
+            while he < ta and temperatures[stk[ta - 1]] < temperatures[i]:
+                ta -= 1
+                idx = stk[ta]
+                ans[idx] = i - idx
+            stk[ta] = i
+            ta += 1
+        return ans
+```
 TypeScript 代码：
 ```TypeScript
-function dailyTemperatures(ts: number[]): number[] {
-    const n = ts.length
+function dailyTemperatures(temperatures: number[]): number[] {
+    const n = temperatures.length
     const ans = new Array<number>(n).fill(0)
     const stk = new Array<number>(n).fill(-1)
     let he = 0, ta = 0
     for (let i = 0; i < n; i++) {
-        while (he < ta && ts[stk[ta - 1]] < ts[i]) {
+        while (he < ta && temperatures[stk[ta - 1]] < temperatures[i]) {
             const idx = stk[--ta]
             ans[idx] = i - idx
         }
@@ -82,21 +115,7 @@ function dailyTemperatures(ts: number[]): number[] {
     return ans
 };
 ```
-Python3 代码：
-```Python3
-class Solution:
-    def dailyTemperatures(self, ts: List[int]) -> List[int]:
-        n, he, ta = len(ts), 0, 0
-        ans, stk = [0] * n, [-1] * n
-        for i in range(n):
-            while he < ta and ts[stk[ta - 1]] < ts[i]:
-                ta -= 1
-                idx = stk[ta]
-                ans[idx] = i - idx
-            stk[ta] = i
-            ta += 1
-        return ans
-```
+
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
 
