--- a/LeetCode/871-880/871. 最低加油次数（困难）.md
+++ b/LeetCode/871-880/871. 最低加油次数（困难）.md
@@ -51,38 +51,87 @@ Tag : 「贪心」、「优先队列（堆）」、「模拟」
 提示：
 * $1 <= target, startFuel, stations[i][1] <= 10^9$
 * $0 <= stations.length <= 500$
-* $0 < stations[0][0] < stations[1][0] < ... < stations[stations.length-1][0] < target$
+* $1 <= position_{i} < position_{i+1} < target$
+* $1 <= fuel_{i} < 10^9$
 
 ---
 
 ### 贪心 + 优先队列（堆）
 
-为了方便，我们记 `target` 为 `t`，记 `startFuel` 为 `start`，记 `stations` 为 `ss`。
+我们可以模拟行进过程，使用 `n` 代表加油站总个数，`idx` 代表经过的加油站下标，使用 `remain` 代表当前有多少油（起始有 `remain = startFuel`)，`loc` 代表走了多远，`ans` 代表答案（至少需要的加油次数）。
 
-我们可以模拟行进过程，使用 `n` 代表加油站总个数，`idx` 代表经过的加油站下标，使用 `remain` 代表当前有多少油（起始有 `remain = start`)，`loc` 代表走了多远，`ans` 代表答案（至少需要的加油次数）。
+只要 `loc < target`，代表还没到达（经过）目标位置，我们可以继续模拟行进过程。
 
-只要 `loc < t`，代表还没到达（经过）目标位置，我们可以继续模拟行进过程，每次将 `remain` 累加到 `loc` 中，含义为使用完剩余的油量，可以去到的最远距离，同时将所在位置 `ss[idx][0] <= loc` 的加油站数量加入优先队列（大根堆，根据油量排倒序）中，再次检查是否满足 `loc < t`（下次循环），此时由于清空了剩余油量 `remain`，我们尝试从优先队列（大根堆）中取出过往油量最大的加油站并进行加油（同时对加油次数 `ans` 进行加一操作），使用新的剩余油量 `remain` 重复上述过程，直到满足 `loc >= t` 或无油可加。
+每次将 `remain` 累加到 `loc` 中，含义为使用完剩余的油量，可以去到的最远距离，同时将所在位置 `stations[idx][0] <= loc` 的加油站数量加入优先队列（大根堆，根据油量排倒序）中。
+
+再次检查是否满足 `loc < target`（下次循环），此时由于清空了剩余油量 `remain`，我们尝试从优先队列（大根堆）中取出过往油量最大的加油站并进行加油（同时对加油次数 `ans` 进行加一操作）。
+
+使用新的剩余油量 `remain` 重复上述过程，直到满足 `loc >= target` 或无油可加。
 
 容易证明该做法的正确性：同样是消耗一次加油次数，始终选择油量最大的加油站进行加油，可以确保不存在更优的结果。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
-    public int minRefuelStops(int t, int start, int[][] ss) {
+    public int minRefuelStops(int target, int startFuel, int[][] stations) {
         PriorityQueue<Integer> q = new PriorityQueue<>((a,b)->b-a);
-        int n = ss.length, idx = 0;
-        int remain = start, loc = 0, ans = 0;
-        while (loc < t) {
+        int n = stations.length, idx = 0;
+        int remain = startFuel, loc = 0, ans = 0;
+        while (loc < target) {
             if (remain == 0) {
                 if (!q.isEmpty() && ++ans >= 0) remain += q.poll();
                 else return -1;
             }
             loc += remain; remain = 0;
-            while (idx < n && ss[idx][0] <= loc) q.add(ss[idx++][1]);
+            while (idx < n && stations[idx][0] <= loc) q.add(stations[idx++][1]);
         }
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int minRefuelStops(int target, int startFuel, vector<vector<int>>& stations) {
+        priority_queue<int> q;
+        int n = stations.size(), idx = 0;
+        int remain = startFuel, loc = 0, ans = 0;
+        while (loc < target) {
+            if (remain == 0) {
+                if (!q.empty() && ++ans >= 0) {
+                    remain += q.top();
+                    q.pop();
+                } else {
+                    return -1;
+                }
+            }
+            loc += remain; remain = 0;
+            while (idx < n && stations[idx][0] <= loc) q.push(stations[idx++][1]);
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def minRefuelStops(self, target: int, startFuel: int, stations: List[List[int]]) -> int:
+        q = []
+        n, idx = len(stations), 0
+        remain, loc, ans = startFuel, 0, 0
+        while loc < target:
+            if remain == 0:
+                if q:
+                    ans += 1
+                    remain += -heappop(q)
+                else:
+                    return -1
+            loc, remain = loc + remain, 0
+            while idx < n and stations[idx][0] <= loc:
+                heappush(q, -stations[idx][1])
+                idx += 1
+        return ans
 ```
 * 时间复杂度：$O(n\log{n})$
 * 空间复杂度：$O(n)$
