--- a/LeetCode/91-100/93. 复原 IP 地址（中等）.md
+++ b/LeetCode/91-100/93. 复原 IP 地址（中等）.md
@@ -41,13 +41,19 @@ Tag : 「回溯算法」、「DFS」
 
 和 [131. 分割回文串](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247487047&idx=1&sn=117c48f20778868442fce44e100d2ea8) 一样，同样是一道求所有方案的题目，只能是没有太多优化的「爆搜」做法。
 
-设计递归函数为 `void dfs(int idx, int n, List<Integer> cur)`，其中 `idx` 和 `n` 分别代表当前处理字符串 `s` 的哪个位置，以及字符串 `s` 的总长度，而 `cur` 的则是代表子串 $s[0 ... (idx - 1)]$ 部分的具体划分方案。
+设计递归函数 `void dfs(int idx, int n, List<Integer> cur)`，其中 `idx` 代表当前处理字符串 `s` 的哪个位置，`n` 代表字符串 `s` 总长度，而 `cur` 的则是代表子串 $s[0 ... (idx - 1)]$ 部分的具体划分方案。
 
-用题目样例 `s = "25525511135"` 作为 🌰，`n` 固定为 `11`，当 `idx = 3` 时，`cur` 为 $s[0...2] = 255$  部分的划分方案，`cur` 可能是 `[2,5,5]`、`[2,55]`、`[25,5]`、`[255]` 之一，在 `cur` 的基础上，我们继续爆搜剩余部分，即递归执行 `dfs(idx, n, cur)`，算法会将剩余部分的划分方案添加到 `cur` 上，我们只需要确保每次追加到 `cur` 的数值符合要求即可（没有前导零 且 范围在 $[0, 255]$ 中）。
+用题目样例 `s = "25525511135"` 作为 🌰，`n` 固定为 `11`。
+
+当 `idx = 3` 时，`cur` 为 $s[0...2] = 255$，`cur` 部分的划分方案可能是 `[2,5,5]`、`[2,55]`、`[25,5]`、`[255]` 之一。
+
+在 `cur` 的基础上，我们继续爆搜剩余部分，即递归执行 `dfs(idx, n, cur)`，算法会将剩余部分的划分方案添加到 `cur` 上，我们只需要确保每次追加到 `cur` 的数值符合要求即可（没有前导零 且 范围在 $[0, 255]$ 中）。
 
 在单次回溯过程中，我们可以将 `idx` 作为当前划分数字的左端点，通过枚举的形式找到右端点 `j`，并将当前数字 $s[idx ... (j - 1)]$ 加到 `cur` 中（若合法），回溯到底后再添加到 `cur` 的元素进行移除。
 
-当 `idx = n` 代表整个 `s` 已经处理完成，若此时 `cur` 恰好有 $4$ 个元素，说明我们找到了一组合法方案，将其拼接成字符串追加到答案数组中。同时也是由于划分过程中 `cur` 最多只有 $4$ 个元素，我们可以用此做简单剪枝。
+当 `idx = n` 代表整个 `s` 已经处理完成，若此时 `cur` 恰好有 $4$ 个元素，说明我们找到了一组合法方案，将其拼接成字符串追加到答案数组中。
+
+同时也是由于划分过程中 `cur` 最多只有 $4$ 个元素，我们可以用此做简单剪枝。
 
 Java 代码：
 ```Java
@@ -80,6 +86,40 @@ class Solution {
         }
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<string> ans;
+    string s;
+    void dfs(int idx, int n, vector<int>& cur) {
+        if (cur.size() > 4) return ;
+        if (idx == n) {
+            if (cur.size() == 4) {
+                string sb;
+                for (int i = 0; i < 4; i++) sb += to_string(cur[i]) + ".";
+                ans.push_back(sb.substr(0, sb.length() - 1));
+            }
+        } else {
+            for (int i = idx; i < n; i++) {
+                int t = 0;
+                for (int j = idx; j <= i; j++) t = t * 10 + (s[j] - '0');
+                if (s[idx] == '0' && i != idx) break;
+                if (t > 255) break;
+                cur.push_back(t);
+                dfs(i + 1, n, cur);
+                cur.pop_back();
+            }
+        }
+    }
+    vector<string> restoreIpAddresses(string _s) {
+        s = _s;
+        vector<int> cur;
+        dfs(0, s.length(), cur);
+        return ans;
+    }
+};
 ```
 Python 代码：
 ```Python
