--- a/LeetCode/11-20/16. 最接近的三数之和（中等）.md
+++ b/LeetCode/11-20/16. 最接近的三数之和（中等）.md
@@ -12,7 +12,7 @@ Tag : 「双指针」、「排序」、「n 数之和」
 
 返回这三个数的和。
 
-假定每组输入只存在唯一答案。
+每组输入只存在唯一答案。
 
 示例：
 ```
@@ -32,8 +32,6 @@ Tag : 「双指针」、「排序」、「n 数之和」
 
 ### 排序 + 双指针
 
-这道题的思路和「15. 三数之和（中等）」区别不大。
-
 对数组进行排序，使用三个指针 `i`、`j` 和 `k` 分别代表要找的三个数。
 
 1. 通过枚举 `i` 确定第一个数，另外两个指针 `j`，`k` 分别从左边 `i + 1` 和右边 `n - 1` 往中间移动，找到满足 `nums[i] + nums[j] + nums[k]` 最接近 `target` 的唯一解。
@@ -45,24 +43,23 @@ Tag : 「双指针」、「排序」、「n 数之和」
 
 为了更快找到答案，对于相同的 `i`，可以直接跳过下标。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
-    public int threeSumClosest(int[] nums, int t) {
+    public int threeSumClosest(int[] nums, int target) {
         Arrays.sort(nums);
-        int ans = nums[0] + nums[1] + nums[2];
-        int n = nums.length;
+        int n = nums.length, ans = nums[0] + nums[1] + nums[2];
         for (int i = 0; i < n; i++) {
             if (i > 0 && nums[i] == nums[i - 1]) continue;
             int j = i + 1, k = n - 1;
             while (j < k) {
                 int sum = nums[i] + nums[j] + nums[k];
-                if (Math.abs(sum - t) < Math.abs(ans - t)) ans = sum;
-                if (ans == t) {
-                    return t;
-                } else if (sum > t) {
+                if (Math.abs(sum - target) < Math.abs(ans - target)) ans = sum;
+                if (ans == target) {
+                    return target;
+                } else if (sum > target) {
                     k--;
-                } else if (sum < t) {
+                } else if (sum < target) {
                     j++;
                 }
             }
@@ -71,7 +68,78 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：排序的复杂度为 $O(\log{n})$，对于每个 `i` 而言，最坏的情况 `j` 和 `k` 都要扫描一遍数组的剩余部分，复杂度为 $O(n^2)$。整体复杂度为 $O(n^2)$
+C++ 代码：
+```C++
+class Solution {
+public:
+    int threeSumClosest(vector<int>& nums, int target) {
+        sort(nums.begin(), nums.end());
+        int n = nums.size(), ans = nums[0] + nums[1] + nums[2];
+        for (int i = 0; i < n; i++) {
+            if (i > 0 && nums[i] == nums[i - 1]) continue;
+            int j = i + 1, k = n - 1;
+            while (j < k) {
+                int sum = nums[i] + nums[j] + nums[k];
+                if (abs(sum - target) < abs(ans - target)) ans = sum;
+                if (ans == target) {
+                    return target;
+                } else if (sum > target) {
+                    k--;
+                } else if (sum < target) {
+                    j++;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def threeSumClosest(self, nums: List[int], target: int) -> int:
+        nums.sort()
+        n, ans = len(nums), nums[0] + nums[1] + nums[2]
+        for i in range(n):
+            if i > 0 and nums[i] == nums[i - 1]: 
+                continue
+            j, k = i + 1, n - 1
+            while j < k:
+                s = nums[i] + nums[j] + nums[k]
+                if abs(s - target) < abs(ans - target):
+                    ans = s
+                if ans == target:
+                    return target
+                elif s > target:
+                    k -= 1
+                elif s < target:
+                    j += 1
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function threeSumClosest(nums: number[], target: number): number {
+    nums.sort((a, b) => a - b);
+    let n = nums.length, ans = nums[0] + nums[1] + nums[2];
+    for (let i = 0; i < n; i++) {
+        if (i > 0 && nums[i] == nums[i - 1]) continue;
+        let j = i + 1, k = n - 1;
+        while (j < k) {
+            const sum = nums[i] + nums[j] + nums[k];
+            if (Math.abs(sum - target) < Math.abs(ans - target)) ans = sum;
+            if (ans == target) {
+                return target;
+            } else if (sum > target) {
+                k--;
+            } else if (sum < target) {
+                j++;
+            }
+        }
+    }
+    return ans;
+};
+```
+* 时间复杂度：排序的复杂度为 $O(n\log{n})$，对于每个 `i` 而言，最坏的情况 `j` 和 `k` 都要扫描一遍数组的剩余部分，复杂度为 $O(n^2)$。整体复杂度为 $O(n^2)$
 * 空间复杂度：$O(n ^ 2)$
 
 ---
