--- a/LeetCode/1141-1150/1143. 最长公共子序列（中等）.md
+++ b/LeetCode/1141-1150/1143. 最长公共子序列（中等）.md
@@ -6,18 +6,20 @@ Tag : 「最长公共子序列」、「LCS」、「序列 DP」
 
 
 
-给定两个字符串 `text1` 和 `text2`，返回这两个字符串的最长 公共子序列 的长度。如果不存在 公共子序列 ，返回 $0$ 。
+给定两个字符串 `s1` 和 `s2`，返回这两个字符串的最长公共子序列的长度。
 
-一个字符串的 子序列 是指这样一个新的字符串：它是由原字符串在不改变字符的相对顺序的情况下删除某些字符（也可以不删除任何字符）后组成的新字符串。
+如果不存在公共子序列，返回 $0$ 。
+
+一个字符串的子序列是指这样一个新的字符串：它是由原字符串在不改变字符的相对顺序的情况下删除某些字符（也可以不删除任何字符）后组成的新字符串。
 
 * 例如，`"ace"` 是 `"abcde"` 的子序列，但 `"aec"` 不是 `"abcde"` 的子序列。
 
-两个字符串的 公共子序列 是这两个字符串所共同拥有的子序列。
+两个字符串的公共子序列是这两个字符串所共同拥有的子序列。
 
 
 示例 1：
 ```
-输入：text1 = "abcde", text2 = "ace" 
+输入：s1 = "abcde", s2 = "ace" 
 
 输出：3  
 
@@ -25,7 +27,7 @@ Tag : 「最长公共子序列」、「LCS」、「序列 DP」
 ```
 示例 2：
 ```
-输入：text1 = "abc", text2 = "abc"
+输入：s1 = "abc", s2 = "abc"
 
 输出：3
 
@@ -33,7 +35,7 @@ Tag : 「最长公共子序列」、「LCS」、「序列 DP」
 ```
 示例 3：
 ```
-输入：text1 = "abc", text2 = "def"
+输入：s1 = "abc", s2 = "def"
 
 输出：0
 
@@ -41,8 +43,8 @@ Tag : 「最长公共子序列」、「LCS」、「序列 DP」
 ```
 
 提示：
-* $1 <= text1.length, text2.length <= 1000$
-* `text1` 和 `text2` 仅由小写英文字符组成。
+* $1 <= s1.length, s2.length <= 1000$
+* `s1` 和 `s2` 仅由小写英文字符组成。
 
 ---
 
@@ -79,11 +81,8 @@ class Solution {
 
         for (int i = 1; i <= n; i++) {
             for (int j = 1; j <= m; j++) {
-                if (cs1[i] == cs2[j]) {
-                    f[i][j] = f[i -1][j - 1] + 1;
-                } else {
-                    f[i][j] = Math.max(f[i - 1][j], f[i][j - 1]);
-                }
+                if (cs1[i] == cs2[j]) f[i][j] = f[i -1][j - 1] + 1;    
+                else f[i][j] = Math.max(f[i - 1][j], f[i][j - 1]);
             }
         }
         // 减去最开始追加的空格
@@ -106,15 +105,52 @@ public:
 
         for(int i = 1; i <= n; i++) {
             for(int j = 1; j <= m; j++) {
-                if(s1[i] == s2[j]) {
-                    f[i][j] = max(f[i-1][j-1] + 1, max(f[i-1][j], f[i][j-1]));
-                } else {
-                    f[i][j] = max(f[i-1][j], f[i][j-1]);
-                }
+                if(s1[i] == s2[j]) f[i][j] = max(f[i-1][j-1] + 1, max(f[i-1][j], f[i][j-1]));
+                else f[i][j] = max(f[i-1][j], f[i][j-1]);
             }
         }
         return f[n][m] - 1;
     }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def longestCommonSubsequence(self, s1: str, s2: str) -> int:
+        n, m = len(s1), len(s2)
+        s1, s2 = " " + s1, " " + s2
+        f = [[0] * (m + 1) for _ in range(n + 1)]
+
+        for i in range(n + 1): f[i][0] = 1
+        for j in range(m + 1): f[0][j] = 1
+
+        for i in range(1, n + 1):
+            for j in range(1, m + 1):
+                if s1[i] == s2[j]:
+                    f[i][j] = f[i - 1][j - 1] + 1
+                else:
+                    f[i][j] = max(f[i - 1][j], f[i][j - 1])
+
+        return f[n][m] - 1
+```
+TypeScript 代码：
+```TypeScript
+function longestCommonSubsequence(s1: string, s2: string): number {
+    const n = s1.length, m = s2.length;
+    s1 = " " + s1; s2 = " " + s2;
+    const f = Array.from({ length: n + 1 }, () => Array(m + 1).fill(0));
+
+    for (let i = 0; i <= n; i++) f[i][0] = 1;
+    for (let j = 0; j <= m; j++) f[0][j] = 1;
+
+    for (let i = 1; i <= n; i++) {
+        for (let j = 1; j <= m; j++) {
+            if (s1[i] == s2[j]) f[i][j] = f[i - 1][j - 1] + 1;    
+            else f[i][j] = Math.max(f[i - 1][j], f[i][j - 1]);
+        }
+    }
+
+    return f[n][m] - 1;
 };
 ```
 * 时间复杂度：$O(n \times m)$
@@ -124,7 +160,7 @@ public:
 
 ### 动态规划（利用偏移）
 
-上述「追加空格」的做法是我比较习惯的做法 🤣
+上述「追加空格」的做法只是个人比较习惯的做法。
 
 事实上，我们也可以通过修改「状态定义」来实现递推：
 
@@ -144,78 +180,59 @@ class Solution {
         int[][] f = new int[n + 1][m + 1]; 
         for (int i = 1; i <= n; i++) {
             for (int j = 1; j <= m; j++) {
-                if (cs1[i - 1] == cs2[j - 1]) {
-                    f[i][j] = f[i - 1][j - 1] + 1;
-                } else {
-                    f[i][j] = Math.max(f[i - 1][j], f[i][j - 1]);
-                }
+                if (cs1[i - 1] == cs2[j - 1]) f[i][j] = f[i - 1][j - 1] + 1;
+                else f[i][j] = Math.max(f[i - 1][j], f[i][j - 1]); 
             }
         }
         return f[n][m];
     }
 }
 ```
-Python3 代码：
-```Python3
-class Solution:
-    def longestCommonSubsequence(self, text1: str, text2: str) -> int:
-        m, n = len(text1), len(text2)
-        dp = [[0] * (n + 1) for _ in range(m + 1)]
-        for i in range(1, m + 1):
-            for j in range(1, n + 1):
-                if text1[i - 1] == text2[j - 1]:
-                    dp[i][j] = dp[i - 1][j - 1] + 1
-                else:
-                    dp[i][j] = max(dp[i - 1][j],dp[i][j - 1])
-        return dp[m][n]
-```
 C++ 代码：
 ```C++
 class Solution {
 public:
-    int longestCommonSubsequence(string text1, string text2) {
-        int m = text1.size(), n = text2.size();
-        vector<vector<int>> dp(m + 1,vector<int>(n + 1,0));
+    int longestCommonSubsequence(string s1, string s2) {
+        int m = s1.size(), n = s2.size();
+        vector<vector<int>> f(m + 1,vector<int>(n + 1,0));
         for(int i = 1; i <= m; i++){
             for(int j = 1; j <= n; j++){
-                if(text1[i - 1] == text2[j - 1]){
-                    dp[i][j] = dp[i - 1][j - 1] + 1;
-                }
-                else{
-                    dp[i][j] = max(dp[i - 1][j],dp[i][j - 1]);
-                }
+                if(s1[i - 1] == s2[j - 1]) f[i][j] = f[i - 1][j - 1] + 1;
+                else f[i][j] = max(f[i - 1][j],f[i][j - 1]);
             }
         }
-        return dp[m][n];
+        return f[m][n];
     }
 };
 ```
-Golang 代码：
-```Go
-func longestCommonSubsequence(text1 string, text2 string) int {
-    m := len(text1)
-    n := len(text2)
-    dp := make([][]int, m+1)
-    for i := range dp {
-        dp[i] = make([]int, n+1)
-    }
-    for i := 0; i < m; i++ {
-        for j := 0; j < n; j++ {
-            if text1[i] == text2[j] {
-                dp[i+1][j+1] = dp[i][j] + 1
-            } else {
-                dp[i+1][j+1] = max(dp[i][j+1], dp[i+1][j])
-            }
+Python 代码：
+```Python
+class Solution:
+    def longestCommonSubsequence(self, s1: str, s2: str) -> int:
+        m, n = len(s1), len(s2)
+        f = [[0] * (n + 1) for _ in range(m + 1)]
+        for i in range(1, m + 1):
+            for j in range(1, n + 1):
+                if s1[i - 1] == s2[j - 1]:
+                    f[i][j] = f[i - 1][j - 1] + 1
+                else:
+                    f[i][j] = max(f[i - 1][j],f[i][j - 1])
+        return f[m][n]
+```
+TypeScript 代码：
+```TypeScript
+function longestCommonSubsequence(s1: string, s2: string): number {
+    const n = s1.length, m = s2.length;
+    const cs1 = s1.split(''), cs2 = s2.split('');
+    const f: number[][] = Array.from({ length: n + 1 }, () => Array(m + 1).fill(0));
+    for (let i = 1; i <= n; i++) {
+        for (let j = 1; j <= m; j++) {
+            if (cs1[i - 1] == cs2[j - 1]) f[i][j] = f[i - 1][j - 1] + 1;
+            else f[i][j] = Math.max(f[i - 1][j], f[i][j - 1]);
         }
     }
-    return dp[m][n]
-}
-func max(i int, j int) int {
-    if i > j {
-        return i
-    }
-    return j
-}
+    return f[n][m];
+};
 ```
 * 时间复杂度：$O(n \times m)$
 * 空间复杂度：$O(n \times m)$
