--- a/LeetCode/311-320/312. 戳气球（困难）.md
+++ b/LeetCode/311-320/312. 戳气球（困难）.md
@@ -8,7 +8,9 @@ Tag : 「区间 DP」、「动态规划」
 
 有 `n` 个气球，编号为 `0` 到 `n - 1`，每个气球上都标有一个数字，这些数字存在数组 `nums` 中。
 
-现在要求你戳破所有的气球。戳破第 `i` 个气球，你可以获得 `nums[i - 1] * nums[i] * nums[i + 1]` 枚硬币。 这里的 `i - 1` 和 `i + 1` 代表和 `i` 相邻的两个气球的序号。
+现在要求你戳破所有的气球。
+
+戳破第 `i` 个气球，你可以获得 `nums[i - 1] * nums[i] * nums[i + 1]` 枚硬币。 这里的 `i - 1` 和 `i + 1` 代表和 `i` 相邻的两个气球的序号。
 
 如果 `i - 1` 或 `i + 1` 超出了数组的边界，那么就当它是一个数字为 `1` 的气球。
 
@@ -74,6 +76,46 @@ class Solution {
         return f[0][n + 1];
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int maxCoins(vector<int>& nums) {
+        int n = nums.size();
+        int arr[n + 2];
+        arr[0] = arr[n + 1] = 1;
+        for (int i = 1; i <= n; i++) arr[i] = nums[i - 1];
+        int f[n + 2][n + 2];
+        memset(f, 0, sizeof f);
+        for (int len = 3; len <= n + 2; len++) {
+            for (int l = 0; l + len - 1 <= n + 1; l++) {
+                int r = l + len - 1;
+                for (int k = l + 1; k <= r - 1; k++) {
+                    f[l][r] = max(f[l][r], f[l][k] + f[k][r] + arr[l] * arr[k] * arr[r]);
+                }
+            }
+        }
+        return f[0][n + 1];
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def maxCoins(self, nums: List[int]) -> int:
+        n = len(nums)
+        arr = [1] * (n + 2)
+        arr[0] = arr[n + 1] = 1
+        for i in range(1, n + 1):
+            arr[i] = nums[i - 1]
+        f = [[0] * (n + 2) for _ in range(n + 2)]
+        for clen in range(3, n + 3):
+            for l in range(0, n + 2 - clen + 1):
+                r = l + clen - 1
+                for k in range(l + 1, r):
+                    f[l][r] = max(f[l][r], f[l][k] + f[k][r] + arr[l] * arr[k] * arr[r])
+        return f[0][n + 1]
 ```
 TypeScript 代码：
 ```TypeScript
