--- a/LeetCode/821-830/829. 连续整数求和（困难）.md
+++ b/LeetCode/821-830/829. 连续整数求和（困难）.md
@@ -6,7 +6,7 @@ Tag : 「数论」、「数学」
 
 
 
-给定一个正整数 $n$，返回 连续正整数满足所有数字之和为 $n$ 的组数 。 
+给定一个正整数 $n$，返回连续正整数满足所有数字之和为 $n$ 的组数 。 
 
 示例 1:
 ```
@@ -68,7 +68,7 @@ $$
 
 因此我们可以在 $[1, \sqrt{2n})$ 范围内枚举 $k$，如果 $k$ 为 $2n$ 约数，并且结合 $(2a + k - 1) \times k = 2n$ 可验证 $a$ 合法，说明找到了一组合法的 $(a, k)$，对答案进行累加。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int consecutiveNumbersSum(int n) {
@@ -80,6 +80,40 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int consecutiveNumbersSum(int n) {
+        int ans = 0; n *= 2;
+        for (int k = 1; k * k < n; k++) {
+            if (n % k != 0) continue;
+            if ((n / k - (k - 1)) % 2 == 0) ans++;
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def consecutiveNumbersSum(self, n: int) -> int:
+        ans, n = 0, n * 2
+        for k in range(1, int(n ** 0.5) + 1):
+            ans += n % k == 0 and (n // k - (k - 1)) % 2 == 0
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function consecutiveNumbersSum(n: number): number {
+    let ans = 0; n *= 2;
+    for (let k = 1; k * k < n; k++) {
+        if (n % k != 0) continue;
+        if ((n / k - (k - 1)) % 2 == 0) ans++;
+    }
+    return ans;  
+};
 ```
 * 时间复杂度：$O(\sqrt{2n})$
 * 空间复杂度：$O(1)$
